--- a/docu/docu_9999.md
+++ b/docu/docu_9999.md
@@ -1,3 +1,9 @@
+markdown guide
+https://www.markdownguide.org/basic-syntax/
+
+[markdwon all in one in VS Code](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one) : URL 복사후 Ctrl+V 하이퍼링크 복사
+<br>
+
 **normal**
 bold
 -[x] todo
@@ -6,18 +12,18 @@ bold
 2. 미리보기 설정 (상단 위 : Ctrl+K V)
 3. ctrl + spacebar : 자동완성 (뭐하는건지 모르겠네)
 
-# 제목1
-## 제목2
-### 제목3
+# 제목1 
+## 제목2 : 샵 2개 
+### 제목3 
 #### 제목4
 ##### 제목5
-###### 제목6
+###### *제목6*
 
-*이태릭*
+*이태릭* * ctrl+I
 
-**볼드**
+**볼드** ** ctrl+B
 
-**_이태릭두껍게_**
+***이태릭두껍게*** *** 
 
 ~~취소선~~
 
@@ -29,3 +35,11 @@ bold
 원시 HTML도 가능함
 
 MD 문서 작성후 Markdown Monster를 활용하여 HTML로 변환
+
+<br> 
+줄바꿈 : 엔터키 2번 또는 br tag
+
+
+수평선 만들기 - 또는 * 또는 _를 3개 이상
+
+___
