--- a/docu/docu_0005.md
+++ b/docu/docu_0005.md
@@ -1,14 +1,22 @@
 # 대통령은 누구인가 (17.06.29)
 
-신이 왕권을 부여
+## 1부. 미스터 프레지던트, 대통령의 탄생
+
+신이 왕권을 부여 / 세습 (대통령 나오기 전)
 
 미국 민주공화정
 
-보스턴 학살 
+보스턴 학살 (독립 6년전)
+
+담배 농사의 성공으로 안정적인 생활이 이루어짐
+
+영국 총독 : 부정부패, 영국 왕 이익 우선, 세금 (식민지 확보 위한 전쟁 수행 대금)
 
 영국으로부터의 독립
 
+<br>
 
+## 2부. 위 더 피플, 국민의 권리
 
 1년반동안의 선거운동 
 
