--- a/my/my_0400.md
+++ b/my/my_0400.md
@@ -10,7 +10,6 @@
 ## 4. markdown all in one in VSC
 1. [markdwon all in one in VS Code](https://marketplace.visualstudio.com/items?itemName=yzhang.markdown-all-in-one) 
 
-
 ## 5. 블로그 작성 방법
 
 A. daum BLOG 망함
@@ -27,15 +26,21 @@ B. 로컬 작성하여 서버에 올림
 
 1. md 파일을 html로 자동변환
    
-   VSC에서 옵션 설정 : "Markdown > Extension > Print: On File Save"
+> VSC에서 옵션 설정 : "Markdown > Extension > Print: On File Save"
    
-![변환이미지](./img/m0400_1.GIF)
+![변환이미지](./img/m0400_2.JPG)
 
+<br>
+
+2. 상대주소로 파일 저장
+
+> VSC에서 옵션 설정 : "Markdown > Extension > Print: On File Save"
+   
+![변환이미지](./img/m0400_1.JPG)
 
 <br>
 
 1. 기타등등 정리중
-
 
 URL 복사후 Ctrl+V 하이퍼링크 복사
 <br>
