--- a/news/news_0001.md
+++ b/news/news_0001.md
@@ -1,4 +1,4 @@
-# 구글, '10년 자바전쟁' 오라클에 최종 승리 (21.04.06)
+# 자바전쟁
 
 2009 오라클 썬 인수
 
@@ -16,4 +16,4 @@
 
 <br> 
  
-[자바전쟁](https://zdnet.co.kr/view/?no=20210406064737)
+[구글, '10년 자바전쟁' 오라클에 최종 승리 (21.04.06, ZDNET)](https://zdnet.co.kr/view/?no=20210406064737)
