--- a/news/news_0002.md
+++ b/news/news_0002.md
@@ -1,4 +1,4 @@
-# AI 따라오기 힘든 '암묵지' 많은 직업 살아남는다 (20.11.22.)
+# AI와 암묵지
 
 새로운 일자리 생김
 
@@ -12,4 +12,4 @@
 
 <br> 
  
-[AI와 암묵지](https://www.joongang.co.kr/article/23925465#home)
+[AI 따라오기 힘든 '암묵지' 많은 직업 살아남는다 (20.11.22, 중앙일보)](https://www.joongang.co.kr/article/23925465#home)
