--- a/news/news_0003.md
+++ b/news/news_0003.md
@@ -1,7 +1,7 @@
-# 코털 뽑지마세요 (20.01.09)
+# 코털 
 
 염증 유발한다
 
 <br> 
  
-[코털](https://imnews.imbc.com/replay/2020/nwtoday/article/5671695_32531.html)
+[코털 뽑지마세요 (20.01.09, MBC)](https://imnews.imbc.com/replay/2020/nwtoday/article/5671695_32531.html)
