--- a/news/news_0004.md
+++ b/news/news_0004.md
@@ -1,4 +1,4 @@
-# 짐 로저스 투자 예언 (21.01.07)
+# 짐 로저스 투자 예언 
 
 ### [짐 로저스, ‘동학개미’에 경고 “끝 다가오고 있다” (21.01.07, 서울신문)](https://www.seoul.co.kr/news/newsView.php?id=20210107500233&wlog_tag3=daum)
 
