--- a/my/my_0400.md
+++ b/my/my_0400.md
@@ -24,17 +24,14 @@ B. 로컬 작성하여 서버에 올림
 
 <br>
 
-1. md 파일을 html로 자동변환
+1. 상대주소로 파일 저장
    
-> VSC에서 옵션 설정 : "Markdown > Extension > Print: On File Save"
+> VSC에서 옵션 설정 : "Markdown > Extension > Print: **Absolute Img Path**"
    
-![변환이미지](./img/m0400_2.JPG)
 
-<br>
+2. md 파일을 html로 자동변환
 
-2. 상대주소로 파일 저장
-
-> VSC에서 옵션 설정 : "Markdown > Extension > Print: On File Save"
+> VSC에서 옵션 설정 : "Markdown > Extension > Print: **On File Save**"
    
 ![변환이미지](./img/m0400_1.JPG)
 
