마무리 & 노래1개 추가

--- a/my/my_0200.md
+++ b/my/my_0200.md
@@ -1,5 +1,11 @@
 # 노래
 
+[헤어질 결심 OST] 정훈희 & 송창식 - 안개
+
+https://www.youtube.com/watch?v=gpi6jrdgK3A
+
+<br>
+
 LINDA : 린다G(이효리) : [싹쓰리(SSAK3) 솔로곡] 린다G - LINDA (Feat. 윤미래) MV - YouTube
 
 https://www.youtube.com/watch?v=LKPsNcuQcQY
