--- a/docu/docu_0010.md
+++ b/docu/docu_0010.md
@@ -1,16 +1,16 @@
 # 차이나는 클라스 (136-139)
 
 
-[139. 같이살자 우리모두](./img/d0010_1.pdf)
+[139. 같이살자 우리모두](./file/d0010_1.pdf)
 
 <br>
 
-[136. 당신도 빅뱅을 믿나요](./img/d0010_2.pdf)
+[136. 당신도 빅뱅을 믿나요](./file/d0010_2.pdf)
 
 <br>
 
-[138. DNA의 배신, 암](./img/d0010_3.pdf)
+[138. DNA의 배신, 암](./file/d0010_3.pdf)
 
 <br>
 
-[137. 지구가 참는 것도 한계가 있다](./img/d0010_4.pdf)
+[137. 지구가 참는 것도 한계가 있다](./file/d0010_4.pdf)
