--- a/my/my_9999.md
+++ b/my/my_9999.md
@@ -1,6 +1,31 @@
 # 무작정 경제 정리 
 
-토지의 통화 창출
+## 버블
+
+국채에서 가장 버블이 많다.
+
+일본 YCC 종료시 미국, 호주, 프랑스 등 국채 문제 가능
+
+미국 : 개인 부채 줄었다. 100 -> 80,  변동금리 40% -> 16%
+
+금융당국 모르는 어느 부분에서 국채 위기 발생 : SVB
+
+금융위기시 **신속, 과감**하게 대응 필요
+
+결정권자 : 의회를 거치거나, (미국의회, 유럽의회)
+
+남유럽위기 때 의회를 통하지 않고 중앙은행을 통하여 정책 펼침
+
+미실현손실이 엄청남
+
+'22.10 영국사태시 미국채 유동성 문제 있는 것 확인
+
+4% 넘어가니깐 문제가 발생하네,,,
+
+<br>
+
+
+## 토지의 통화 창출
 
 - 미국 : 23조$ (GDP) / 35조$ (부동산총액)
 - 중국 : 17조$ (GDP) / 61조$ (부동산총액)
@@ -12,7 +37,7 @@
 <br>
 
 
-플라자합의 이후 일본 (1985~1989)
+## 플라자합의 이후 일본 (1985~1989)
 
 - 투금계정 : 9조엔 -> 40조엔
 - 집값 : 4배뜀
@@ -22,7 +47,7 @@
 <br> 
 
 
-중국 부실 -> 자산관리공사 -> 중앙은행에서 돈 빌려줌
+## 중국 부실 -> 자산관리공사 -> 중앙은행에서 돈 빌려줌
 
 돈의 소각으로 부실 정리 예상
 
@@ -30,7 +55,7 @@
 <br> 
 
 
-**BE a Risk taker**
+## **BE a Risk taker**
 
 주식은 Risk를 안고서 조금씩 사 가는 거다
 
@@ -40,7 +65,7 @@
 <br> 
 
 
-'23년 경제전망 : 상고하저로 예상
+## '23년 경제전망 : 상고하저로 예상
 
 올해 하반기 재정공백 상태 예상
 
@@ -50,7 +75,7 @@
 <br> 
 
 
-인도 아다니 그룹
+## 인도 아다니 그룹
 
 힌델버그 리포트 (니콜라 얘기했던 곳)
 
@@ -62,5 +87,20 @@
 <br> 
 
 
+## 한국 증권사
+
+온라인 증권사 수수료 Zero화 ==> 이자 수입으로 대체, PF투자 
 
 
+<br> 
+
+
+## 아세안
+
+평균 연령 낮다 -> 지속적 성장 가능
+
+젊은 세대들이 많아서 트랜드 읽기 좋음
+
+10개국가 다양성 추구 : EU보다 통합되기 어렵다. 바다로 갈라져 있음
+
+만장일치, 소지역협력체(메콩강협의체)
