금융 기타 등

--- a/my/my_9999.md
+++ b/my/my_9999.md
@@ -1,6 +1,42 @@
 # 무작정 경제 정리 
 
-## 버블
+## 금융위기 (#최용식, #정책당국)
+
+**경제병리학**
+
+그 때와 다르게 **정책 당국**에서 시의적절하게 대응하고 있다
+
+SVB 등
+- 본원통화 6% 자산동결 (3340억$)
+- 전액보장 말했지만, 아직 인출가능하지 않음. 예금보험공사 보증한 금액만 인출 가능
+- 신용파괴 효과 <--> 신용창조 효과
+- 신용창조효과만 받아들임 (자본주의 옹호 위해)
+
+1930년대 오스트리아 2대 은행이 1대 은행에 합병
+- CS가 USB에 합병
+- 대공황때 망함
+
+미국 딜레마
+- 금리상승 - 금융업약화, 침체 (장기)
+- 약달러 - 환차손, 자본이탈 (단기)
+
+어떤 일들이 일어나고, 시장이 어떻게 나올지는 아무도 모른다
+
+22년~23년
+- 금리보다 낮은 금리 인상, 미국으로 돈이 빠져 나감, 유동성 수축효과
+
+유럽
+- CS위기상황에서도 0.5% 금리 인상
+
+중국
+- 1조7천억$ 모두 부실화(?) (일대일로 투자액+통화스왑)
+- 통계조작 (?)
+
+
+<br>
+
+
+## 버블 (#국채위기)
 
 국채에서 가장 버블이 많다.
 
@@ -22,10 +58,11 @@
 
 4% 넘어가니깐 문제가 발생하네,,,
 
+
 <br>
 
 
-## 토지의 통화 창출
+## 토지의 통화 창출 (#부동산)
 
 - 미국 : 23조$ (GDP) / 35조$ (부동산총액)
 - 중국 : 17조$ (GDP) / 61조$ (부동산총액)
@@ -37,7 +74,7 @@
 <br>
 
 
-## 플라자합의 이후 일본 (1985~1989)
+## 플라자합의 이후 일본 (1985~1989) (#일본, #버블)
 
 - 투금계정 : 9조엔 -> 40조엔
 - 집값 : 4배뜀
@@ -47,7 +84,7 @@
 <br> 
 
 
-## 중국 부실 -> 자산관리공사 -> 중앙은행에서 돈 빌려줌
+## 중국 부실 -> 자산관리공사 -> 중앙은행에서 돈 빌려줌 (#중국)
 
 돈의 소각으로 부실 정리 예상
 
@@ -55,7 +92,7 @@
 <br> 
 
 
-## **BE a Risk taker**
+## **BE a Risk taker**  (#투자, #RISK)
 
 주식은 Risk를 안고서 조금씩 사 가는 거다
 
@@ -65,17 +102,7 @@
 <br> 
 
 
-## '23년 경제전망 : 상고하저로 예상
-
-올해 하반기 재정공백 상태 예상
-
-찐링 (중국 애널)
-
-
-<br> 
-
-
-## 인도 아다니 그룹
+## 인도 아다니 그룹 (#인도)
 
 힌델버그 리포트 (니콜라 얘기했던 곳)
 
@@ -87,7 +114,7 @@
 <br> 
 
 
-## 한국 증권사
+## 한국 증권사 (#증권사)
 
 온라인 증권사 수수료 Zero화 ==> 이자 수입으로 대체, PF투자 
 
@@ -95,7 +122,7 @@
 <br> 
 
 
-## 아세안
+## 아세안 (#아세안)
 
 평균 연령 낮다 -> 지속적 성장 가능
 
