--- a/my/my_0200.md
+++ b/my/my_0200.md
@@ -1,5 +1,11 @@
 # 노래
 
+## 유튜브 반복재생
+
+- 재생중  -  마우스 오른쪽 버튼  -  연속 재생 체크
+
+<br>
+
 [헤어질 결심 OST] 정훈희 & 송창식 - 안개
 
 https://www.youtube.com/watch?v=gpi6jrdgK3A
