--- a/my/my_0200.md
+++ b/my/my_0200.md
@@ -13,6 +13,13 @@ https://www.youtube.com/watch?v=gpi6jrdgK3A
 <br>
 
 
+아무노래 (지코)  :  [MV] ZICO(지코) _ Any song(아무노래) - (뮤비 없는 것으로 바꿈)
+
+https://www.youtube.com/watch?v=AAOyOZ3GeZ0
+
+<br>
+
+
 Remember me : Miguel (코코 OST) : [Coco] Miguel - Remember me (한국어 가사/해석/자막) - YouTube
 
 https://www.youtube.com/watch?v=ph-w3BAUQhA
@@ -44,13 +51,6 @@ https://www.youtube.com/watch?v=TmBUspbL1q4
 내가 제일 잘 나가  (2NE1)  :   2NE1 - 내가 제일 잘 나가(I AM THE BEST) M/V - YouTube
 
 https://www.youtube.com/watch?v=j7_lSP8Vc3o
-
-<br>
-
-
-아무노래 (지코)  :  [MV] ZICO(지코) _ Any song(아무노래) - YouTube
-
-https://www.youtube.com/watch?v=UuV2BmJ1p_I
 
 <br>
 
