--- a/my/my_9999.md
+++ b/my/my_9999.md
@@ -1,5 +1,20 @@
 # 무작정 경제 정리 
 
+## 선진국 은행 사태
+
+전세계 은행이 촘촘히 연결되어 있음
+
+선진국보다 비선진국에서 추가적인 위기 가능성 있음
+
+CS 발행 영구채 : HSBC 많이 발행했고 유로존 3000억$ 발행
+
+부채비율 높은 은행/기업 위험
+
+시중자금이 단기 유동화 되어 있음
+
+<br>
+
+
 ## 금융위기 (#최용식, #정책당국)
 
 **경제병리학**
@@ -31,6 +46,18 @@ SVB 등
 중국
 - 1조7천억$ 모두 부실화(?) (일대일로 투자액+통화스왑)
 - 통계조작 (?)
+
+
+<br>
+
+
+## 미국 국채
+
+미국 개인 자산이 주식에 많이 있기 때문에 주가 하락 가만히 두기 어려움
+
+중국, 사우디가 미국 국채 사는 것 주저함
+
+FED가 30% 가지고 있음
 
 
 <br>
