--- a/my/my_9999.md
+++ b/my/my_9999.md
@@ -1,5 +1,21 @@
 # 무작정 경제 정리 
 
+경제 위기 방향
+- 채권 -> 주식 -> 부동산 -> 실물
+  
+## 반도체 경기
+
+반도체 재고 줄이는중 ('22.5)
+- 보통 6~9개월이었는데, 이번에는 1~1.5년 예상 (적정 수준 이상 재고 가지고 있었음, 초호황이었음)
+
+지속적인 투자 필요한 산업, 투자를 하면 기존 사업의 수익성이 떨어짐
+
+감산은 앉은 자리에서 감각상각비를 날리는 것임
+
+<br>
+
+
+
 ## 선진국 은행 사태
 
 전세계 은행이 촘촘히 연결되어 있음
@@ -10,7 +26,7 @@ CS 발행 영구채 : HSBC 많이 발행했고 유로존 3000억$ 발행
 
 부채비율 높은 은행/기업 위험
 
-시중자금이 단기 유동화 되어 있음
+시중자금이 단기 유동화 되어 있음 (은행보다는 MMF)
 
 <br>
 
@@ -22,6 +38,7 @@ CS 발행 영구채 : HSBC 많이 발행했고 유로존 3000억$ 발행
 그 때와 다르게 **정책 당국**에서 시의적절하게 대응하고 있다
 
 SVB 등
+- SNS의 발달로 엄청 빠른 속도의 인출 사태 발생(뱅크런) --> 엄청 빠른 대응 필요
 - 본원통화 6% 자산동결 (3340억$)
 - 전액보장 말했지만, 아직 인출가능하지 않음. 예금보험공사 보증한 금액만 인출 가능
 - 신용파괴 효과 <--> 신용창조 효과
@@ -59,6 +76,7 @@ SVB 등
 
 FED가 30% 가지고 있음
 
+위안화 국제화 위한 노력중 (브릭스, 사우디 등 중동)
 
 <br>
 
@@ -81,7 +99,7 @@ FED가 30% 가지고 있음
 
 미실현손실이 엄청남
 
-'22.10 영국사태시 미국채 유동성 문제 있는 것 확인
+'22.10 영국사태시 미국채 유동성 문제 있는 것 확인 / 금융 시장 리스크 확인하니깐 금리를 못 올리고 돈을 풀더라
 
 4% 넘어가니깐 문제가 발생하네,,,
 
