--- a/book/book_0116.md
+++ b/book/book_0116.md
@@ -1,6 +1,10 @@
-# 청년들에게 (제목 확인중)
+# 그러니까 아무말도 하지마세요 (2019)
 
-### **파트1** 
+출판사:산과글, 지은이:청년43인
+
+<br>
+
+### **제1장 서로 이야기해요**
 
 012 그 길을 걷는 사람이 자신의 실수가 무엇인지 알고 싶지만 못 찾거나 길을 헤매면서 도움이 필요할 때 따뜻하게 손을 내밀어 조언을 해줐으면 좋겠습니다
 
