조금씩조금씩

--- a/my/my_9997.md
+++ b/my/my_9997.md
@@ -1,5 +1,7 @@
 # 투자원칙 
 
+중국 대형마트 : 까르프는 살아남았는데, 최근에 팔렸다. WHY **빅데이터** 기반 경영에서 뒤쳤져서,,,
+
 **이길 수 있는 자리**에서 투자하자
 
 **가치가 우샹향**하는지를 판단하자. 가격을 계속 보면 너무 피곤해진다
