--- a/my/my_9999.md
+++ b/my/my_9999.md
@@ -176,3 +176,17 @@ FED가 30% 가지고 있음
 10개국가 다양성 추구 : EU보다 통합되기 어렵다. 바다로 갈라져 있음
 
 만장일치, 소지역협력체(메콩강협의체)
+
+
+<br> 
+
+
+## 몰라몰라
+
+2008년 이후 돈이 실물로 안 들어가고 금융권에서 돌아다님
+
+월가 출신 재무장관 다수
+
+약한 나라일수록 규제를 통해 거품 안끼게 해야 함
+
+민간은 적자를 감수하고 투자를 안하기 때문에 정부에서 해줘야 한다
