--- a/book/book_0118.md
+++ b/book/book_0118.md
@@ -61,8 +61,8 @@
 
 - 울분 : 사회적으로 공정하지 않다는 생각이나 정의롭지 못하다는 느낌 (만성 실직, 만성 질환 등)
 - 한국의 '한'과는 차이가 있음, 억울한 감정이 오래 지속되어 돌덩이처럼 굳은 상태, 복수보다는 포기에 가까운 상태
-- 공통점 : 분노를 느끼는 대상을 용서하지 않으면 해소되는 않늠 감정
-- 마음을 보듬어 상처입은 자리에 새 사이 돋아나게 하고, 그렇게 돋아난 새 마음이 성숙해지고 성장하도록 돕고 기다려야 한다
+- 공통점 : 분노를 느끼는 대상을 용서하지 않으면 해소되는 않는 감정
+- 마음을 보듬어 상처입은 자리에 새 살이 돋아나게 하고, 그렇게 돋아난 새 마음이 성숙해지고 성장하도록 돕고 기다려야 한다
 
 <br>
 
@@ -160,7 +160,7 @@
   - 자기 자신의 과거와 현재를 비교합니다
   - 인생의 목표를 설정하되 너무 거창하거나 큰 목표보다는 작은 목표를 여러 개 만들어 놓고 노력하는 것입니다
 - 재충전을 위한 작은 행복을 추구하기
-  - 무언가 즉가적이고 말초적인 것 말고,,,
+  - 무언가 즉각적이고 말초적인 것 말고,,,
 - 내 삶의 대의명분 잊지 않기
   - 왜 이러고 사는지에 대한 이유
 - 주변 사람들의 행복 훔치지 않기
@@ -183,8 +183,8 @@
 ### 마른 장작에서 젖은 장작으로
 
 - 리질리언스 : 회복력
-- 시스템의 내외부의 충격으로 인해 발생하는 불안정성을 극복하게 시스템 기능을 회복하는 능력
-- 심리적 회복력을 악회사키는 원인으로는 만성질환, 가난, 부모와 어릴적부터 떨어져 산 것, 가정폭력 등에 따른 스트레스
+- 시스템의 내외부의 충격으로 인해 발생하는 불안정성을 극복하여 시스템 기능을 회복하는 능력
+- 심리적 회복력을 악회사키는 원인으로는 만성질환, 가난, 부모와 어릴적부터 떨어져 산 것, 가정폭력 등에 따른 축적된 스트레스
 - 사회적 자본(친밀한 인간관계 정도)이 넉넉한 사람은 비록 경제적으로 좀 어려워지더라도 쉽사리 우을증 등 스트레스 질환에 빠져들지 않는다
 
 
