--- a/book/book_0121.md
+++ b/book/book_0121.md
@@ -22,10 +22,10 @@
 - 123. 벤자민 그레이엄은 신화시대에서 역사시대로 넘어오는 과정에서 독보적인 성과를 내면서 살아남았다
 - 131. 주식은 기업의 일부로 보아야 하고 시장을 보는 적절한 관점을 유지해야 하며 적정 안전마진을 확보해야 한다
 - 134. 주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 가회일 뿐입니다
-- 139. 주식은 분명히 가치를 지닙니다. 그러느 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.
+- 139. 주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.
 - 140. **미스터마켓**, 조울증 환자, 매일 찾아와서 사달라/팔아달라 함, 내 마음에 드는 가격을 제시할 때만 매매하면 됨
 - 141. 사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다
-- 147. 안전만진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념
+- 147. 안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념
 - 152. 오해1. 가치주. 저PER 주식을 사야한다
 - 153. 그레이엄이 성장 가능성이 큰 주식을 성장주라고 불렀다. 성장주에 투자할 때에는 상당히 조심해라
 - 153. 현명한 투자자라면 성장주를 고르는데 집중해야 한다. 보수적으로 추정한 미래 실적을 바탕으로 합리적인 가격에 매수
@@ -35,9 +35,9 @@
 - 168. 지금 효율적이지 않은 시장이 나중에 왜 효율적이게 되나요?
 - 171. 재투자 이익에 의한 초과수익 증가가 누적되어 기업가치 상승을 이루어내는 것이 바로 주식의 안전마진
 - 177. 방어적 투자자 : 심각한 실수나 손실을 피하는 것  /  수고나 골칫거리, 빈번한 의사결정의 부담에서 벗어나는 것을 목표
-- 177. 공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평규보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함
-- 179. 시장 전체를 추종하는 투자를 현쟁의 용어로 수동적 투자자
-- 181. 투자자들에게 '제발 아래도 좀 보라'고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)
+- 177. 공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평균보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함
+- 179. 시장 전체를 추종하는 투자를 현재의 용어로 수동적 투자자
+- 181. 투자자들에게 **'제발 아래도 좀 보라'**고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)
 
 <br>
 
@@ -60,13 +60,13 @@
 - 기술은 의외로 침식당하기 쉬운 해자입니다. 경쟁사와의 격차를 유지하는데에 계속 비용이 들고, 한번 전략을 잘못 세우거나 운이 나빠서 선도적인 지위를 뺏겨버리기도 합니다
 - 항공업은 지속적인 투자 필요, 제자리를 유지하는데에도 엄청난 현금 사용
 - **레슨3. 능력 범위**
-- 270. 본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깉이 공부하고 집중투자했습니다.
+- 270. 본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깊이 공부하고 집중투자했습니다.
 - 274. 가치는 동적으로 변화하는 개념이었고, 나름의 방법으로 측정할 수는 있지만 시간이 지남에 따라 계속 변화하고 따라서 재평가해야 하는 개념
 - 279. 능력범위 이내에서 투자를 해야 경영진을 믿고 기다릴 수 있습니다
-- 282. 배우자와 결혼해서 그려 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.
-- 283. 차트투자자와 대조하여 펀덜멘탈리스트라고 함
+- 282. 배우자와 결혼해서 그를 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.
+- 283. 차트투자자와 대조하여 펀드멘탈리스트라고 함
 - 288. 영구적인 손실에 대해서 극단적인 회피 성향을 가지고 있다
-- 290. 조건을 만족하는 주식을 찾기는 상당히 어렵고 많은 노력이 들어가는데, 기껏 찾아놓고 미미한 수량을 사서 좋은 기회를 놓치거나 단기간의 주가 상승 혹은 하락에 휘둘려서 장기간 큰 이익을 볼 기회를 놓치는 걸을 경계
+- 290. 조건을 만족하는 주식을 찾기는 상당히 어렵고 많은 노력이 들어가는데, 기껏 찾아놓고 미미한 수량을 사서 좋은 기회를 놓치거나 단기간의 주가 상승 혹은 하락에 휘둘려서 장기간 큰 이익을 볼 기회를 놓치는 것을 경계
 - 291. 전체 포트폴리오로 보면 성공사례가 실수사례를 덮어줍니다. 장기간 누적될수록 성공사례는 복리의 힘으로 어마어마한 수익을 주거든요
   
 <br>
@@ -77,7 +77,7 @@
 - 월가의 영웅 추천
 - 잘 모르고 막 매매할 때가 사실 가장 짜릿하고 즐겁습니다
 - 320. 내가 환경을 예측해 열심히 매매  vs  환경변화에 잘 대응하는 기업을 찾아서 묻어가는 방법
-- 330. 주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 비대칭 자신이다. (짧게 끊으면 끊을수록 대쳥이 됨)
+- 330. 주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 비대칭 자신이다. (짧게 끊으면 끊을수록 대칭이 됨)
 - 캡(뚜껑)이 씌워진 주식 (저상장주, 자산주)
 - 339. 장기적으로 비행동의 후회가 더 크지만 단기적으론 행동의 후회가 더 큽니다.
 - PER를 주로 이용하여 기업 평가 (중요한 것은 미래의 이익인데 미래는 불확실하니까 현재의 이익으로 주가를 나누는 PER는 불완전)
