거인의어깨2 정리중

--- a/book/book_0123.md
+++ b/book/book_0123.md
@@ -1,15 +1,79 @@
 # 거인의 어깨 2
 
-초판 4쇄 2023.02.06(22.12.12), 출판사:포레스트북스, 지은이:홍진채
+초판 2쇄 2022.12.26(22.12.12), 출판사:포레스트북스, 지은이:홍진채
 
 <br>
 
-### **01~04. 굳이 열심해 해야 하나**
+### **09. 기초 체력 테스트**
 
-- 018. 위험선호도가 가장 낮은 경우 즉 채권이 100% 배분한 경우에 오히려 위험이 증가
+030 사업모델 분석
 
+044 재무제표 분석
+ - 072 파터 린치의 말을 빌리자면, 사지 않는 주식에서 손해볼 일은 없습니다.
 
+073 산업 분석
+
+099 경쟁력 분석
+ - 101 포지셔닝으로 돈을 벌고 있다면 효율성 개선과 진입장벽 구축에 노력하고 있는지를 보아야 합니다
+ - 126 BCG 매트릭스의 기본해석은 개 사업은 버리고, 캐시카우의 자금을 잘 활용해서 스타를 키우거나, 물음표를 스타로 만들기 위해 애써야 한다
+ - 127 애플은 고객이 애플의 모든 제품을 구매하여 통합 생태계 내에서 애플이 제공하는 서비스를 이용하는 것입니다
+
+129 능력 범위 분석
+ - 142 내 생각이 있다면 틀리고 나서 고칠 수 있습니다
 
 <br>
 
-### 
+
+### **10. 가치평가라는 환상**
+
+148 평가 지표와 평가 방법
+ - 163 배당금은 회사가 가진 현금을 회사 외부로 정직하게 내보내는 일이라 꼼수를 쓸 수 없습니다
+
+170 가치란 도대체 무엇인가
+ - 173 회사 전체가 캐시카우 사업부에 기대서 새로운 일을 추구하지 않는다면 오히려 감점 요인입니다
+ - 178 투자자 전체로 보면 기업이 번 돈 이상을 기업으로부터 빼내는 마법같은 방법은 없습니다. (거래비용, 소득세, 경영진 모럴 헤저드 제외)
+ - 184 투자자 전체로 보면 운동량이 증가할수로 수익은 감소합니다 (거래증가할수록 거래비용 부담)
+
+186 할인율은 도대체 무엇인가
+ - 196 버핏은 투자를 장래에 더 많은 구매력을 받으리라는 잠재적인 기대에 따라 현재 구매력을 남에게 이전하는 행위 (최소한 물가상승률을 뛰어넘어야 함)
+ - 199 우리는 영원히 보유할 기업에 투자하므로, 금리가 지금처럼 항상 낮게 유지될 것이라고 가정하지 않습니다
+
+202 기대수익률은 이차원 값이다
+ - 219 사업분석의 귀결점은 초과수익의 폭과 지속가능기간이다 (당기 갭 축소가 아닌 장기기대수익률)
+ - 222 가치를 동적으로 이해한다면 사소한 가격 차이보다는 사업의 펀더멘털에 훨씬 집중할 수 있게 됩니다
+
+227 프리미엄의 조건
+
+<br>
+
+
+### **11. 생선 가게 고양이**
+
+241 나쁜 사람들
+
+248 열어보면 대충 다 나와요
+
+263 경영진의 깊이
+ - 버핏은 2016년 애플이 마이너스 운전자본을 필요로 한다는 것을 깨달았고, 2017년에는 애플은 소비재 회사라고 하였습니다
+ 
+267 주주환원에 대하여
+
+<br>
+
+
+### **12. 피셔, 한 가지 발차기**
+
+276 성장주 집중투자
+
+280 레슨 1. 기업의 성장은 무한하다
+
+292 레슨 2. 위대한 기업이 위대한 주식이 되는 마법
+
+317 레슨 3. 사야 할 때, 팔지 말아야 할 때
+
+333 사실 수집에 대하여
+
+338 다시, 여기서 그만두셔도 됩니다
+
+342 투자자의 서재
+
