--- a/book/book_0123.md
+++ b/book/book_0123.md
@@ -84,7 +84,7 @@
 
 317 레슨 3. 사야 할 때, 팔지 말아야 할 때
  - 323 팔아어 할 때 (3)
-   - 내가 잘못 판단한 것으로 확인되었을 때 / 회사가 더 이상 훌륭하지 않아졌을 때 : 현 시점에서 다시 판다하고 제재고 필요
+   - 내가 잘못 판단한 것으로 확인되었을 때 / 회사가 더 이상 훌륭하지 않아졌을 때 : 현 시점에서 다시 판다하고 재고 필요
    - 더 좋은 기회를 발견 : 교차매매, 쉽지 않음
 
 333 사실 수집에 대하여
