--- a/docu/docu_0012.md
+++ b/docu/docu_0012.md
@@ -8,7 +8,7 @@
 <br>
 
 
-### 1. 세상이 어떻게 편집되어 있는가
+### **1. 세상이 어떻게 편집되어 있는가**
 
 다르게 보기
 
@@ -52,7 +52,7 @@
 
 <br>
 
-### 2. 일상 / 우리 삶을 어떻게 편집해야 재미있어 지는가
+### **2. 일상 / 우리 삶을 어떻게 편집해야 재미있어 지는가**
 
 21세기 인류 : 재미와 행복 (절대 빈곤을 벗어나서, 왜 사는가에 대해서 고민)
 
@@ -70,7 +70,7 @@
 
 동양(역원근법) : 멀티블 퍼스펙티브 이미 가졌음(인상파) : 과학적 사고 늦었으나, 
 
-수태고지 : 어디에 붙어있는지에 따라서 고려하여 그림 (다빈치 그림) : 항상 정면에서 봐야한다는 편견
+수태고지 : 어디에 붙어있는지에 고려하여 그림 (다빈치 그림) : 항상 정면에서 봐야한다는 편견
 
 음악 : 지휘자가 속도를 편집 : 대상이 없다 : 사람을 움직이게 함 : 
 
@@ -86,3 +86,41 @@
 
 늙어서 가장 행복한 것은 공부하는 거더라
  - 내가 좋아하는 것을 공부하는 것
+
+<br>
+
+### **3. 참조적 삶이란**
+
+객관적인 세계는 없다. 편집된 세계다
+
+북극 : 남쪽으로 갔다가 서쪽으로 갔다가 북쪽으로 갔는데 원위치
+
+객관적이라 생각하는 것이 절대 객관적이지 않다 : 지도
+
+기억하고 싶은 것만 기억한다 (빼 내 오는 것이 다르다) : 객관성 -> 상호주관성(각 개인이 공유하고 있는 것)
+
+원숭이 vs 인간 : 함께 보는 것이 가능함, 남들이 보는 것을 같이 보고자 함  (같이보기 -> 의미공유)
+
+정보의 빈틈을 줘야지 공각이 가능함 : 이야기가 풍부한 사람
+
+재미(소통의 조건) : 유머있는 사람이 설득을 잘 함
+
+자막은 일방적인 소통이 아니라 상호 소통을 하는 것임
+
+사회 가치 : 평균 수명 50세 (근면, 성실) <--> 평균 수명 100세 시대 : Burnout, 인안하고 30년은 더 살아야 함, 노년의 행복이 진짜 행복
+
+나가 : 남의 얘기네. 니 이론이 뭐야
+
+독일 : 카드로 정리 : 편집한 카드 쭉 뽑아냄 (카드에 제목 붙이는 것 : 메타언어 (블로그 태그))
+
+나만의 메타언어를 붙이는 것이 실력 -> 남들이 생각 못하는 것을 생각할 수 있음
+
+컨닝페이퍼 : 추상화되는 정보 (메타언어)
+
+100세 시대에서의 문제 : 조급함과 불안 (숲을 못 본다 : 메타언어를 상실한다)
+
+불안하면 전체를 보는 능력이 사람짐
+
+미래의 불안을 앞당겨요
+
+재미와 의미가 만나는 지점 : 오늘을 살자 : 내가 부르는 노래로 내 주위 사람들이 나를 안다
