거인의어깨1 2nd중

--- a/book/book_0121.md
+++ b/book/book_0121.md
@@ -4,16 +4,25 @@
 
 <br>
 
-### **01~04. 굳이 열심해 해야 하나**
+### 파운데이션을 찾아서
 
-- 018. 위험선호도가 가장 낮은 경우 즉 채권이 100% 배분한 경우에 오히려 위험이 증가
+- 014 주식은 다른 자산 대비 위험을 덜 짊어지고도 월등히 높은 수익을 거둘 수 있습니다
+
+
+## 1부 굳이 열심해 해야 하나
 
 ### 01. 주식, 이 특이한 자산
-  - 026. 자산배분에서 주식을 제외하는 것은 엄청나게 위험합니다
-
+  - 026 자산배분에서 주식을 제외하는 것은 엄청나게 위험합니다
+  - 033 부동산은 대출을 껴서 산 이후 대출 금리 이상으로 부동산 가격이 상승하면 순수하게 자기자본으로 샀을 때보다 더 큰 이득을 얻을 수 있습니다
+  - 035 변동성은 주식의 가장 큰 단점
+  - 042 효율적 투자선 : 위험 줄이고 가장 높은 수익률 획득히는 비율 : 1년 투자 (주식 13%), 10년 투자 (주식 25%), 30년 투자 (주식 68%)
+  - 043 위험선호도가 가장 낮은 경우 즉 채권이 100% 배분한 경우에 오히려 위험이 증가
+  
 ### 02. 창의성과 정직함
-  - 045. 앞으로 얼마의 시간이 흐르든 주식과 같은 자산이 다른 자산군보다 압도적인 승자가 될 것으로 믿습니다. 더 중요한 사실은 이쪽이 훨씬 더 안전하다는 점입니다
-  - 046. 주식은 보유 기간이 길어질수록 변동성이 줄어드는 아주 특이한 자산
+  - 045 앞으로 얼마의 시간이 흐르든 주식과 같은 자산이 다른 자산군보다 압도적인 승자가 될 것으로 믿습니다. 더 중요한 사실은 이쪽이 훨씬 더 안전하다는 점입니다
+  - 046 주식은 보유 기간이 길어질수록 변동성이 줄어드는 아주 특이한 자산
+  - 054 창의성과 정직함에 대해서 주주가 기업을 얼마나 신뢰하느냐가 곧 주식의 가치입니다
+  - 056 미국은 사업가를 존중하고 영웅시하되, 사기를 치거나 약속을 어긴 사업가는 과감하게 퇴출
 
 ### 03. 항상 괴로운 투자자
 - 063. 이게 얼마짜리인지를 아무도 모른다
