--- a/book/book_0121.md
+++ b/book/book_0121.md
@@ -25,10 +25,10 @@
   - 056 미국은 사업가를 존중하고 영웅시하되, 사기를 치거나 약속을 어긴 사업가는 과감하게 퇴출
 
 ### 03. 항상 괴로운 투자자
-- 063 이게 얼마짜리인지를 아무도 모른다. 정말로 아무도 모릅니다. (경연지도 M&A 과정의 투자자나 자문가도).  창의성과 정직함 그리고 믿음 vs. 미래 현금 흐름의 현재가 할인
+- 063 이게 얼마짜리인지를 아무도 모른다. 정말로 아무도 모릅니다. (경영자도 M&A 과정의 투자자나 자문가도).  창의성과 정직함 그리고 믿음 vs. 미래 현금 흐름의 현재가 할인
 - 064 가치 따위 고려하지 않고 매매 : 단기적인 움직임에 집중, 가치 측정하기 어렵기 때문, 가치 측정은 너무나도 주관적임
 - 065 주식투자는 제로섬 게임 (딜러를 포함하면 마이너스섬 게임), 대부분의 사람들은 시장수익률 하회 (하우스만 돈을 번다 : 세금(국가), 수수료(투자운용사))
-- 065 시스템 외부로부터 자금의 유출입이 되느냐에 따라서 닫힉 시스템과 열린 시스템으로 구분 (주식시장은 열린시스템. 회사가 번 돈이 주주에게 환원)
+- 065 시스템 외부로부터 자금의 유출입이 되느냐에 따라서 닫힌 시스템과 열린 시스템으로 구분 (주식시장은 열린시스템. 회사가 번 돈이 주주에게 환원)
 - 책 : 주식하는 마음
 - 073 주식시장에서 우리 뇌는 항상 무언가른 하도록 지시 : 실제로 의사결정의 결과를 보기 위해서는 짧게는 몇 개월, 길게는 몇 년씩 기다려야 할 수도 있습니다
 - 074 주가선행지표를 발견했다고 하더라도 그 지표가 광범위하게 알려지면 선행성이 사라집니다
@@ -47,7 +47,7 @@
 <br>
 
 
-## 2부 거인의 어깨s
+## 2부 거인의 어깨
 
 ### 05. 어서 오게 인간
 - 104. 중요한 건 재료가 아니라 투자자의 머릿속에서 무엇을 상상하는가입니다
@@ -60,16 +60,24 @@
 
 ### **06. 그레이엄, 여전히 너무나 저평가된**
 
+책 : 증권분석(1934), **현명한 투자자**(1949)
+
 119 성과를 보자
   - 123. 벤자민 그레이엄은 신화시대에서 역사시대로 넘어오는 과정에서 독보적인 성과를 내면서 살아남았다
 
 125 배울 수 있는가
-
-131 레슨1. 주식은 사업에 대한 소유권
+  - 125. 훌륭한 투자자였을 뿐 아니라, 다른 사람에게 투자를 잘하는 방법을 알려주기 위해 각고의 노력을 다함
   - 131. 주식은 기업의 일부로 보아야 하고 시장을 보는 적절한 관점을 유지해야 하며 적정 안전마진을 확보해야 한다
-  - 134. 주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 가회일 뿐입니다
 
-139 레슨2 미스터마켓
+131 레슨1. **주식은 사업에 대한 소유권**
+  - 132. 내 사업을 얼마의 가격이면 만족스럽게 매각할 수 있을지, 타인의 사업을 인수한다면 얼마의 가격에 만족스럽게 인수할 수 있을지
+  - 134. 주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 기회일 뿐입니다
+  - 135. 가치 기반 사고를 하지 않는 투자자는 가격이 오르든 내리든 언제나 불안합니다.
+  - 136. 초과수익의 원천 두 가지 : 시점 선택(오를 타이밍)과 가격 선택(적정가격보다 낮을 때 매수)
+    - 시점선택은 매우 어려움, 현명한 투자자는 가격선택만으로 만족스러운 결과 획득 가능
+  - 137. 가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음
+  
+139 레슨2. 미스터마켓
   - 139. 주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.
   - 140. **미스터마켓**, 조울증 환자, 매일 찾아와서 사달라/팔아달라 함, 내 마음에 드는 가격을 제시할 때만 매매하면 됨
   - 141. 사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다
