--- a/book/book_0121.md
+++ b/book/book_0121.md
@@ -75,32 +75,39 @@
   - 135. 가치 기반 사고를 하지 않는 투자자는 가격이 오르든 내리든 언제나 불안합니다.
   - 136. 초과수익의 원천 두 가지 : 시점 선택(오를 타이밍)과 가격 선택(적정가격보다 낮을 때 매수)
     - 시점선택은 매우 어려움, 현명한 투자자는 가격선택만으로 만족스러운 결과 획득 가능
-  - 137. 가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음
+  - 137. **가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음**
   
 139 레슨2. 미스터마켓
   - 139. 주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.
+  - 140. 시장이란 내가 어떤 사업체를 인수하거나 매각할 일이 있을 때 잠깐 들르는 곳이라고 생각
   - 140. **미스터마켓**, 조울증 환자, 매일 찾아와서 사달라/팔아달라 함, 내 마음에 드는 가격을 제시할 때만 매매하면 됨
   - 141. 사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다
+  - 143. 내가 받아들일 수 있는 '마음 편한 가격', 그리고 받아들일 수 없는 '불편한 가격'
 
 143 레슨3. 안전마진
-- 147. 안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념
+  - 144. 건전한 투자의 비밀을 한마디로 요약한다면, 안전마진
+  - 144. 무작정 싸게??? 언제 사야하는 알 수 없다. 오를 때는 살 수 없다.
+  - 147. 안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념
   
 152 오해1. 가치주
-  - 152. 저PER 주식을 사야한다
-  - 153. 그레이엄이 성장 가능성이 큰 주식을 성장주라고 불렀다. 성장주에 투자할 때에는 상당히 조심해라
+  - 152. 저PER 주식을 사야한다는 오해 / 내가 생각하는 적정 PER대비 낮은 PER 주식을 사는 것임
+  - 153. 그레이엄이 성장 가능성이 큰 주식을 성장주라고 불렀다. 성장주에 투자할 때에는 상당히 조심해라 
   - 153. 현명한 투자자라면 성장주를 고르는데 집중해야 한다. 보수적으로 추정한 미래 실적을 바탕으로 합리적인 가격에 매수
-  - 158. 주식의 가치는 미래 현금흐름의 현재가 할인
+  - 158. 주식의 가치는 미래 현금흐름의 현재가 할인 (미래 성장은 가치를 구성하는 핵심 요소)
   - 158. 개정판이 나올 때마다 이전에 제안했던 공식을 버리고 새로운 공식으로 그 자리를 대체했습니다. (수많은 사람이 따라하면 오래가지 못함)
 
 163 오해2. 가격은 가치에 수렴한다
+  - 164. 장기적으로 가격은 가치에 수렴한다는 오해
   - 166. 가격은 가치에 수렴하지 않습니다. 언제나 불안정하게 흔들리고 있습니다.
+  - 167. 랜덤워크 : 주식 가격의 변동 : 고장난 체중계 
   - 168. 지금 효율적이지 않은 시장이 나중에 왜 효율적이게 되나요?
+  - 170. 화사가 청산 절차를 밟지 않는 한 1주당 자산가액은 이 주식의 시장가치와 아무런 상관이 없다
+  - 170. 내재가치가 만족할 만한 속도로 성장하기만 한다면 그 사업의 성공이 언제 인정 받는냐는 그다지 중요하지 않습니다
 
 175 오해3 그레이엄 '스타일'
   - 171. 재투자 이익에 의한 초과수익 증가가 누적되어 기업가치 상승을 이루어내는 것이 바로 주식의 안전마진
   - 177. 방어적 투자자 : 심각한 실수나 손실을 피하는 것  /  수고나 골칫거리, 빈번한 의사결정의 부담에서 벗어나는 것을 목표
   - 177. 공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평균보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함
-  - 179. 시장 전체를 추종하는 투자를 현재의 용어로 수동적 투자자
   - 181. 투자자들에게 **'제발 아래도 좀 보라'**고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)
 
 <br>
