--- a/book/book_0121.md
+++ b/book/book_0121.md
@@ -50,8 +50,8 @@
 ## 2부 거인의 어깨
 
 ### 05. 어서 오게 인간
-- 104. 중요한 건 재료가 아니라 투자자의 머릿속에서 무엇을 상상하는가입니다
-- 106. 투자의 세계에서 단기 성과는 무작위성에 크게 영향을 받습니다
+- 104 중요한 건 재료가 아니라 투자자의 머릿속에서 무엇을 상상하는가입니다
+- 106 투자의 세계에서 단기 성과는 무작위성에 크게 영향을 받습니다
 - 책 플랫랜드
   - 2차원세계에 사는 사각형과 3차원 세계의 구 : 구가 사각형에게 3차원 세계에 대해서 설명
   - 사각형이 3차원의 세계를 이해하고 그 이상의 차원이 존재할 수 있다고 추론하지만, 구는 그런 세계가 존재할 수 없다고 주장
@@ -63,91 +63,106 @@
 책 : 증권분석(1934), **현명한 투자자**(1949)
 
 119 성과를 보자
-  - 123. 벤자민 그레이엄은 신화시대에서 역사시대로 넘어오는 과정에서 독보적인 성과를 내면서 살아남았다
+  - 123 벤자민 그레이엄은 신화시대에서 역사시대로 넘어오는 과정에서 독보적인 성과를 내면서 살아남았다
 
 125 배울 수 있는가
-  - 125. 훌륭한 투자자였을 뿐 아니라, 다른 사람에게 투자를 잘하는 방법을 알려주기 위해 각고의 노력을 다함
-  - 131. 주식은 기업의 일부로 보아야 하고 시장을 보는 적절한 관점을 유지해야 하며 적정 안전마진을 확보해야 한다
+  - 125 훌륭한 투자자였을 뿐 아니라, 다른 사람에게 투자를 잘하는 방법을 알려주기 위해 각고의 노력을 다함
+  - 131 주식은 기업의 일부로 보아야 하고 시장을 보는 적절한 관점을 유지해야 하며 적정 안전마진을 확보해야 한다
 
 131 레슨1. **주식은 사업에 대한 소유권**
-  - 132. 내 사업을 얼마의 가격이면 만족스럽게 매각할 수 있을지, 타인의 사업을 인수한다면 얼마의 가격에 만족스럽게 인수할 수 있을지
-  - 134. 주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 기회일 뿐입니다
-  - 135. 가치 기반 사고를 하지 않는 투자자는 가격이 오르든 내리든 언제나 불안합니다.
-  - 136. 초과수익의 원천 두 가지 : 시점 선택(오를 타이밍)과 가격 선택(적정가격보다 낮을 때 매수)
+  - 132 내 사업을 얼마의 가격이면 만족스럽게 매각할 수 있을지, 타인의 사업을 인수한다면 얼마의 가격에 만족스럽게 인수할 수 있을지
+  - 134 주식이 어떠한 가치를 지니는 물건이라고 생각하면, 가격 변동은 내가 그 물건을 싸게 사거나, 비싸게 팔 수 있는 기회일 뿐입니다
+  - 135 가치 기반 사고를 하지 않는 투자자는 가격이 오르든 내리든 언제나 불안합니다.
+  - 136 초과수익의 원천 두 가지 : 시점 선택(오를 타이밍)과 가격 선택(적정가격보다 낮을 때 매수)
     - 시점선택은 매우 어려움, 현명한 투자자는 가격선택만으로 만족스러운 결과 획득 가능
-  - 137. **가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음**
+  - 137 **가장 사업처럼 하는 투자 : 자신의 상품의 가치 이해, 대리인이 유능하고 정직하다는 믿음**
   
 139 레슨2. 미스터마켓
-  - 139. 주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.
-  - 140. 시장이란 내가 어떤 사업체를 인수하거나 매각할 일이 있을 때 잠깐 들르는 곳이라고 생각
-  - 140. **미스터마켓**, 조울증 환자, 매일 찾아와서 사달라/팔아달라 함, 내 마음에 드는 가격을 제시할 때만 매매하면 됨
-  - 141. 사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다
-  - 143. 내가 받아들일 수 있는 '마음 편한 가격', 그리고 받아들일 수 없는 '불편한 가격'
+  - 139 주식은 분명히 가치를 지닙니다. 그 가치가 얼마인지 모두가 동의할 수 있는 하나의 값으로 계산해낼 수는 없습니다.
+  - 140 시장이란 내가 어떤 사업체를 인수하거나 매각할 일이 있을 때 잠깐 들르는 곳이라고 생각
+  - 140 **미스터마켓**, 조울증 환자, 매일 찾아와서 사달라/팔아달라 함, 내 마음에 드는 가격을 제시할 때만 매매하면 됨
+  - 141 사업에 대한 판단능력이 부족할수록 타인의 판단, 즉 가격 변동에 휘둘리게 되고 잘못된 선택을 할 가능성이 커집니다
+  - 143 내가 받아들일 수 있는 '마음 편한 가격', 그리고 받아들일 수 없는 '불편한 가격'
 
 143 레슨3. 안전마진
-  - 144. 건전한 투자의 비밀을 한마디로 요약한다면, 안전마진
-  - 144. 무작정 싸게??? 언제 사야하는 알 수 없다. 오를 때는 살 수 없다.
-  - 147. 안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념
+  - 144 건전한 투자의 비밀을 한마디로 요약한다면, 안전마진
+  - 144 무작정 싸게??? 언제 사야하는 알 수 없다. 오를 때는 살 수 없다.
+  - 147 안전마진은 기대수익률뿐만 아니라 실수에 대한 여유공간을 포괄하는 개념
   
 152 오해1. 가치주
-  - 152. 저PER 주식을 사야한다는 오해 / 내가 생각하는 적정 PER대비 낮은 PER 주식을 사는 것임
-  - 153. 그레이엄이 성장 가능성이 큰 주식을 성장주라고 불렀다. 성장주에 투자할 때에는 상당히 조심해라 
-  - 153. 현명한 투자자라면 성장주를 고르는데 집중해야 한다. 보수적으로 추정한 미래 실적을 바탕으로 합리적인 가격에 매수
-  - 158. 주식의 가치는 미래 현금흐름의 현재가 할인 (미래 성장은 가치를 구성하는 핵심 요소)
-  - 158. 개정판이 나올 때마다 이전에 제안했던 공식을 버리고 새로운 공식으로 그 자리를 대체했습니다. (수많은 사람이 따라하면 오래가지 못함)
+  - 152 저PER 주식을 사야한다는 오해 / 내가 생각하는 적정 PER대비 낮은 PER 주식을 사는 것임
+  - 153 그레이엄이 성장 가능성이 큰 주식을 성장주라고 불렀다. 성장주에 투자할 때에는 상당히 조심해라 
+  - 153 현명한 투자자라면 성장주를 고르는데 집중해야 한다. 보수적으로 추정한 미래 실적을 바탕으로 합리적인 가격에 매수
+  - 158 주식의 가치는 미래 현금흐름의 현재가 할인 (미래 성장은 가치를 구성하는 핵심 요소)
+  - 158 개정판이 나올 때마다 이전에 제안했던 공식을 버리고 새로운 공식으로 그 자리를 대체했습니다. (수많은 사람이 따라하면 오래가지 못함)
 
 163 오해2. 가격은 가치에 수렴한다
-  - 164. 장기적으로 가격은 가치에 수렴한다는 오해
-  - 166. 가격은 가치에 수렴하지 않습니다. 언제나 불안정하게 흔들리고 있습니다.
-  - 167. 랜덤워크 : 주식 가격의 변동 : 고장난 체중계 
-  - 168. 지금 효율적이지 않은 시장이 나중에 왜 효율적이게 되나요?
-  - 170. 화사가 청산 절차를 밟지 않는 한 1주당 자산가액은 이 주식의 시장가치와 아무런 상관이 없다
-  - 170. 내재가치가 만족할 만한 속도로 성장하기만 한다면 그 사업의 성공이 언제 인정 받는냐는 그다지 중요하지 않습니다
+  - 164 장기적으로 가격은 가치에 수렴한다는 오해
+  - 166 가격은 가치에 수렴하지 않습니다. 언제나 불안정하게 흔들리고 있습니다.
+  - 167 랜덤워크 : 주식 가격의 변동 : 고장난 체중계 
+  - 168 지금 효율적이지 않은 시장이 나중에 왜 효율적이게 되나요?
+  - 170 화사가 청산 절차를 밟지 않는 한 1주당 자산가액은 이 주식의 시장가치와 아무런 상관이 없다
+  - 170 내재가치가 만족할 만한 속도로 성장하기만 한다면 그 사업의 성공이 언제 인정 받는냐는 그다지 중요하지 않습니다
 
 175 오해3 그레이엄 '스타일'
-  - 171. 재투자 이익에 의한 초과수익 증가가 누적되어 기업가치 상승을 이루어내는 것이 바로 주식의 안전마진
-  - 177. 방어적 투자자 : 심각한 실수나 손실을 피하는 것  /  수고나 골칫거리, 빈번한 의사결정의 부담에서 벗어나는 것을 목표
-  - 177. 공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평균보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함
-  - 181. 투자자들에게 **'제발 아래도 좀 보라'**고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)
+  - 171 재투자 이익에 의한 초과수익 증가가 누적되어 기업가치 상승을 이루어내는 것이 바로 주식의 안전마진
+  - 177 방어적 투자자 : 심각한 실수나 손실을 피하는 것  /  수고나 골칫거리, 빈번한 의사결정의 부담에서 벗어나는 것을 목표
+  - 177 공격적 투자자 : 기꺼이 시간과 노력을 투입하여 평균보다 더 건전하고 매력적인 종목을 선정  /  더 많은 에너지를 투입해서 초과수익을 내고자 함
+  - 181 투자자들에게 **'제발 아래도 좀 보라'**고 조언 (비관적인 미래에서 얼마나 잃을 수 있나)
 
 <br>
 
 ### **07. 버핏, 범접할 수 없는 천재**
 
 198 성과를 보자
+  - 200 은퇴선언 : 다른 토끼를 추월하는데 모든 에너지늘 쏟는 인생을 살고 싶지 않다 (69년)
+  - 200 버핏의 은퇴시점은 탁월했습니다. 1970년대에는 두 번의 오일쇼크, 인플레이션, 금리급등, 닉슨쇼크, 베트남전쟁, 워터게이트사건, 아프칸침공  /  S&P지수가 10년간 100언저리
+  - 201 방향성을 예측하는 투자를 하지 않았지만, 시장의 커다란 변곡점에서는 탁월한 의사결정
+  - 201 이제는 투자할 때다(74년), 실물투자를 버리고 이제는 주식을 쌔 때(79년)
 
 206 집에서 따라 하지 마세요
-
-- 그레이엄 추앙, 입사, 자체 펀드 운용
-- 버핏의 은퇴시점은 탁월했습니다. 1970년대에는 두 번의 오일쇼크, 인플레이션, 금리급등, 닉슨쇼크, 베트남전쟁, 워터게이트사건, 아프칸침공  /  S&P지수가 10년간 100언저리
-- 방향성을 예측하는 투자를 하지 않았지만, 시장의 커다란 변곡점에서는 탁월한 의사결정
-- 1974.11월 필립피셔의 성장주 종목들을 밴 그래이엄의 담배꽁초 가격으로 살 수 있는 최초의 시기
-- 버핏의 주주서한 책 
+  - 책 : 버핏의 주주서한
+  - 215 버크셔는 훌륭한 겨영진에 높은 가중치를 두고 인수, 인수 후에는 완전히 독립적인 경영 보장 
 
 219 **레슨1. 젖소를 키웁시다**
-  - 훌륭한 기업을 적당한 가격에 사는 것이 적당한 기업을 훌륭한 가격에 사는 것보다 낫습니다
-  - 담배꽁초 기업 : 회사 내부에 현금화할 수 있는 어떤 자산이 있고, 주가가 이보다 싸면 담배꽁초 기업입니다.
-  - 현금은 장기간에 걸쳐 확실히 구매력을 상실하는 자산입니다
-  - 보통주나 토지 같은 생산적인 자산이야말로 우수한 실적을 창출할 가능성이 가장 높은 투자 대상이다
-  - 배당 : 일부만 돌려줌, 유보금은 주준의 것, 내면화되어 더 미래의 배당으로 또는 청산시 잔여자산
+  - 220 훌륭한 기업을 적당한 가격에 사는 것이 적당한 기업을 훌륭한 가격에 사는 것보다 낫습니다
+  - 221 담배꽁초 기업 : 회사 내부에 현금화할 수 있는 어떤 자산이 있고, 주가가 이보다 싸면 담배꽁초 기업입니다.
+  - 223 채권형 자산(가끔 수익 창줄), 살출물없는자산(원유 등 실물자산, 단기변동성 축소에는 도움), 현금은 장기간에 걸쳐 확실히 구매력을 상실하는 자산입니다
+  - 224 산출물이 있는 자산(젖소) : 보통주나 토지 같은 생산적인 자산이야말로 우수한 실적을 창출할 가능성이 가장 높은 투자 대상이다
+  - 226 배당 : 일부만 돌려줌, 유보금은 주준의 것, 내면화되어 더 미래의 배당으로 또는 청산시 잔여자산
+  - 226 배당과 시세차익 중 배당에만 집중
+  - 230 그레이엄 (주리를 틀어서 획득) vs 버핏(파트너 관계 구축)
+  - 230 좋은 기업의 조건 : 사업을 이해할 수 있고, 장기 경제성이 좋으며, 경영진이 유능하고 믿을 수 있고, 인수 가격이 합리적인 기업
+  - 책 : 피셔. 위대한 기업에 투자하라
 
 241 **레슨2. 경제적 해자**
-  - 지속가능한 경쟁우위
+  - 241 시즈캔디 : 발렌타이데이에 연인에게 선물하면 첫키스를 할 수 있다.
+  - 245 장기간 보유하는 리스크
+  - 246 경제적 프렌차이즈 : 소비자가 필요/욕망한다, 소비자의 마음 속에 대체재가 없다, 가격 규제가 없다
+  - 250 현금이 어디에 얼마나 잠겼다가 언제 얼마나 회수되는지
+  - 259 향후의 성장을 위한 혹은 현 상태를 유지하기 위한 투자금이 영업이익보다 훨씬 과도하다면 이는 기업가치가 커지고 있는 중이라고 보기 애매합니다
+  - 259 오너어닝 = 당기순이익 + 감가상각비 - 자본지출(투자)
+  - 267 항공 산업은 끝없이 자본을 요구하면 항구적인 경쟁우위 확보가 어려움 ()
   - 투자자는 계속 돈을 요구하는 기업이 아니라 돈을 벌어주는 기업을 찾아내야 합니다.
   - 기술은 의외로 침식당하기 쉬운 해자입니다. 경쟁사와의 격차를 유지하는데에 계속 비용이 들고, 한번 전략을 잘못 세우거나 운이 나빠서 선도적인 지위를 뺏겨버리기도 합니다
-  - 항공업은 지속적인 투자 필요, 제자리를 유지하는데에도 엄청난 현금 사용
   
 269 **레슨3. 능력 범위**
-- 270. 본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깊이 공부하고 집중투자했습니다.
-- 274. 가치는 동적으로 변화하는 개념이었고, 나름의 방법으로 측정할 수는 있지만 시간이 지남에 따라 계속 변화하고 따라서 재평가해야 하는 개념
-- 279. 능력범위 이내에서 투자를 해야 경영진을 믿고 기다릴 수 있습니다
+  - 270 버핏은 본인이 좀 더 잘 이해할 수 있는 몇몇 종목을 추려내서 깊이 공부하고 집중투자했습니다.
+  - 274 가치는 동적으로 변화하는 개념이었고, 나름의 방법으로 측정할 수는 있지만 시간이 지남에 따라 계속 변화하고 따라서 재평가해야 하는 개념
+  - 278 능력범위 개념은 업사이드보다는 다운사이드에서 빚을 발함. 일회성 이슈가 터졌을 때 회사의 대응력을 믿고 기다릴지. 저점에서 팔고 고점에서 사는 행위를 반복할지 좌우
+  - 279 능력범위 이내에서 투자를 해야 경영진을 믿고 기다릴 수 있습니다
 
 282 버핏의 말, 말, 말
-  - 282. 배우자와 결혼해서 그를 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.
-  - 283. 차트투자자와 대조하여 펀드멘탈리스트라고 함
-  - 288. 영구적인 손실에 대해서 극단적인 회피 성향을 가지고 있다
-  - 290. 조건을 만족하는 주식을 찾기는 상당히 어렵고 많은 노력이 들어가는데, 기껏 찾아놓고 미미한 수량을 사서 좋은 기회를 놓치거나 단기간의 주가 상승 혹은 하락에 휘둘려서 장기간 큰 이익을 볼 기회를 놓치는 것을 경계
-  - 291. 전체 포트폴리오로 보면 성공사례가 실수사례를 덮어줍니다. 장기간 누적될수록 성공사례는 복리의 힘으로 어마어마한 수익을 주거든요
+  - 282 배우자와 결혼해서 그를 바꾸려는 건 미친 짓입니다. 누군가를 고용하고서는 그를 바꾸려는 것도 미친 짓입니다.
+  - 283 차트투자자와 대조하여 펀드멘탈리스트라고 함 : 가격의 추세, 저항선, 지지성 등이 의사결정에 영향을 미치지 않는다
+  - 285 투자의 첫번째 원칙은 돈을 잃지 않는 것이고, 두번째 원칙은 첫번째 원칙을 잊지 않는 것이다
+  - 287 개별 투자건이 유리한 확ㄹ분포인지 확인하고 투자 / 개별 투자 건이 실패했을 때 다시는 게임에 참여할 수 없는 구조를 만들지 마라
+  - 288 영구적인 손실에 대해서 극단적인 회피 성향을 가지고 있다 (단기적인 주가 하락에 겁먹고 주식을 팔아서 영구적으로 구매력 손실 확정)
+  - 290 조건을 만족하는 주식을 찾기는 상당히 어렵고 많은 노력이 들어가는데, 기껏 찾아놓고 미미한 수량을 사서 좋은 기회를 놓치거나 단기간의 주가 상승 혹은 하락에 휘둘려서 장기간 큰 이익을 볼 기회를 놓치는 것을 경계
+  - 291 한두개 실수가 있어도 전체 포트폴리오로 보면 성공사례가 실수사례를 덮어줍니다. 장기간 누적될수록 성공사례는 복리의 힘으로 어마어마한 수익을 주거든요
+  - 296 변동성은 절대로 위험이 아닙니다. 위험은 영구적인 구매력 손실의 가능성입니다
+  - 298 버핏의 할인유 : 그냥 **국채 수익률** 사용
+  - 298 BPS(주당순자산) : 이미 투입된 비용. 미래 현금흐름 알아내는데 도움 안됨. 내재가치 변동 추적하기 좋음
   
 <br>
 
