거인의어깨1 2nd 완료

--- a/book/book_0121.md
+++ b/book/book_0121.md
@@ -171,20 +171,27 @@
 304 성과를 보자
 
 309 참 쉽죠?
-
-- 편드매니저, 1977~1990 마젤란펀드, 일반투자자를 위해 책 3권 서술
-- 월가의 영웅 추천
-- 잘 모르고 막 매매할 때가 사실 가장 짜릿하고 즐겁습니다
+  - 편드매니저, 1977~1990 **마젤란펀드**, 일반투자자를 위해 책 3권 서술
+  - 책 : 월가의 영웅 추천
+  - 311 월스트리트는 똑똑한 바보들로 가득 차 있으며, 개인투자자는 기관투자자가 겪어야 할 제약을 갖고 있지 않기 때문에 아마추어 투자자가 더 유리
 
 318 레슨1. 바텀업
-  - 320. 내가 환경을 예측해 열심히 매매  vs  환경변화에 잘 대응하는 기업을 찾아서 묻어가는 방법
+  - 318 장세에 연연하지 마라
+  - 319 장세 변화를 예측하고자 하는 사람들은 **두 번 중에 열 번 정도 틀립니다**
+  - 320 내가 환경을 예측해 열심히 매매  vs  환경변화에 잘 대응하는 기업을 찾아서 묻어가는 방법
+  - 320 길게 보면 매크로 변수들은 돌고 돕니다
+  - 321 아무리 생각해봐도 바텀업투자 즉 기업을 믿고 가는 투자가 유리한 게임입니다
+  - 323 기업의 실적이 좋아졌을 때 이 실적이 정말로 기업이 잘해서 잘 낸 실적인지 구분 필요 (매크로 상황 확인 필요)
 
 328 레슨2. 10루타
-  - 330. 주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 비대칭 자신이다. (짧게 끊으면 끊을수록 대칭이 됨)
+  - 330 주식은 기본적으로 잠재 이익의 폭이 잠재 손실의 폭보다 큰 **비대칭 자신**이다. (짧게 끊으면 끊을수록 대칭이 됨)
   - 캡(뚜껑)이 씌워진 주식 (저상장주, 자산주)
-  - 339. 장기적으로 비행동의 후회가 더 크지만 단기적으론 행동의 후회가 더 큽니다.
+  - 332 오르는 주식은 팔고, 내리는 주식을 보유한다. 이것은 꽃**을 뽑아내고 잡초에 물을 주는 것처럼 분열없는 행동이다**
+  - 339 장기적으로 비행동의 후회가 더 크지만 단기적으론 행동의 후회가 더 큽니다.
+  - 340 기업에 오래 투자하고 함께하는 행위 자체가 투자자의 능력 범위를 넓혀가는 일
   - PER를 주로 이용하여 기업 평가 (중요한 것은 미래의 이익인데 미래는 불확실하니까 현재의 이익으로 주가를 나누는 PER는 불완전)
 
 341 레슨3. 분산투자
+  - 347 종목을 편입할 때 허들
 
 피터 린치의 '기법'들
