--- a/docu/docu_0013.md
+++ b/docu/docu_0013.md
@@ -4,6 +4,7 @@
 - 김영익, 오건영, 이광수, 채상욱, 빈센트
 
 내역
+   - 시사기획 창 426.미래로 넘기는 시한폭탄 (23.07.11)
    - 삼프로 글로벌이슈체크 최홍석 (23.08.10)
    - 삼프로 In-Depth30 이선엽 (23.08.11)
    - 삼프로 In-Depth30 한상완 (23.08.09)
@@ -11,8 +12,30 @@
    - 홍사훈 : 한문도 (23.08.09)
    - 김작가 : 빈센트 (23.07.31녹화) : 한 달 동안 변동된 내역 전반적인 설명 : 거시적 관점
    - 북언더스탠딩, 돈을 찍어내는 제왕 연준, 채상욱 (23.08.06)
+   - 김작가 : 박은정(23.07.19녹화)
   
 <br>
+
+### **시사기획 창 426.미래로 넘기는 시한폭탄 (23.07.11)**
+- 일본 영화 : 플랜75, 자신의 죽음을 선택 가능, 고령자 퇴출 프로그램
+- 일본 고령인구 29%(65세 이상) 출산율 2022년 역대 최저 1.26명 동률  vs  우리나라 2022년 0.78명
+- 군겐도, 작은 회사가 만든 기적, 지역 기반 업체에서 젊은 사람들의 일자리 창출
+- 이토추상사, 야근을 없앰, 직원들 출산율 높아짐
+- 토쿄(대도시) 여성에게 좋은 일자리가 있음  but, 지방은,,,
+- 저출산 : 결혼을 하지 않기 때문, 결혼한 사람은 출생율 비슷
+- 출산지원에만 지원, 결혼 자체를 안하는 것 인식 못함
+- 국민연금(일반적인 자영업, 65만원 수준), 후생연금(40년 혼자 일한 경우, 250만원 수준)
+- 2004년 고이즈미 연금 개혁 실시 (2013 13.58 -> 2017 18.30, 자동 조절 장치) : 정치상황으로 보험료율을 올리지도 연금을 내리지도 못함
+- 2020년. 정부예산 107조엔, 사회보장비용 131조엔 : 수입 79조엔, 정부빚 52조엔
+- 전기고령자(65-74), 후기고령자(75-) : 의료비 7조엔 vs 17조엔(정부50%, 현역40%, 본인10% 부담)
+- 아카시 시 : 육아용품 지원, 아이와 관련 상담 지원, 둘째부터는 어린이집도 무료 : 10년 연속 인구 증가, 1.48 -> 1.65
+- 고령자 정책만으로는 안된다
+- 분유시장 2018 4200억 2022 2700억, 고령자 단백질 식품 제조로 전향
+- 1955~1974 90만명 이상씩 출생 
+- 현재 26명 부양, 2040년엔 60명 부양
+- 1988년 보험류율 3%, 소득대체율 70 -> 1998년 9% 60% -> 2007년 9% 40% (2028년까지)
+- 연금 재정에 대한 고갈
+  
 
 ### **삼프로 글로벌이슈체크 최홍석 (23.08.10)**
 - 국제유가 9개월만에 최고치, 공급우려가 중 디플레 상쇄
@@ -37,7 +60,7 @@
 <br>
 
 ### **삼프로 In-Depth30 한상완 (23.08.09)**
-- 미국의 베버리지 곡선 : 구인율, 실업률 그래프 (서비스 국가)
+- 미국의 **베버리지 곡선** : 구인율, 실업률 그래프 (서비스 국가)
 - 제조국가(한국) : 생산, 재고 비율
 - 한국 경제 저점 통과중 (반도체, 중국), 반등은 느릴거다
 - 미국 하향 안정화(저물가 중성장), 중국 반등 빠르지 않다.(주택 부양책 사용하지 않음)
