--- a/docu/docu_0013.md
+++ b/docu/docu_0013.md
@@ -4,6 +4,7 @@
 - 김영익, 오건영, 빈센트, 이광수(부동산), 채상욱(부동산), 안유화(중국)
 
 내역
+   - 삼프로 In-Depth30 이현지 (23.08.14)
    - 삼프로 : 문홍철 (23.08.14)
    - 김작가 : 안유화 (23.08.07녹화, 더플로)
    - 시사기획 창 426.미래로 넘기는 시한폭탄 (23.07.11)
@@ -18,20 +19,31 @@
   
 <br>
 
+### **삼프로 In-Depth30 이현지 (23.08.14)**
+- CJ ENM
+  - 영화.드라마 등 만든 회사 인수 후 적자, 미국 회사는 고정비 줄이기 힘들다
+  - 작가 파업. 배우도 동참 : AI 활용으로 직업 안정성
+  - 티빙 더 문장 (1분기 400억, 2분기는 더 480억) : 가입자는 늘고 있는데, 제작비가 많이 듦, 1분기 만든 작품을 6개월 정도 상각함
+  - 기획사 : 팝업스토어 2~3주, MD 매출 상당함, 콘서트는 물론 MD
+- 빅 4
+  - 기대치를 상회하는 실적을 냈었음 (콘서트, MD 를 통해서)
+  - 팬텀이 커지고 있음. 세븐틴 700만장 (옛날것도 함께 팔아서500+), 누군지도 모르는 
 
 ### **삼프로 : 문홍철 (23.08.14)**
 - 장기금리는 미국 채무에 직접적인 영향 받음
-- 피치 미리 알고 선빵, 부채 많이 나옴
+- 피치 미리 알고 선빵하여 등급 하향, 채권 발행 많을 것이라는 내용
 - 거버넌스 훼손
-- 공공부채를 볼 때는 생각을 바꾸어야 함
+- 공공부채를 볼 때는 생각을 바꾸어야 함 (민간부채 대비)
 - 정부 : 투자할 수요가 없어도 투자함, 눈먼돈이다 (민간은 이익 보일 때만 부채 냄)
-- 성장이 떨어질 때 정부가 부채를 내서 늘어남
-- 채권 물량 많을 때 금리 오르는 기간은 짧더라. 성장 낮은 것 인식한 이후 다시 떨어짐
+- 성장이 떨어질 때 정부가 부채를 내서 성장 자극하면서 부채가 늘어남
+- **채권 물량 많을 때 금리 오르는 기간은 짧더라. 성장 낮은 것 인식한 이후 다시 떨어짐**
 - 세수가 줄어들어서 채권 발행 늘어남
-- GDP / GDI 단기적으로 차이 날 수 있음. 내년에 거꾸로 예상 (경제침체). show me the money(세수, 실제 경제)
+- GDP / GDI 단기적으로 차이 날 수 있음. 올해 GDP 높게 나옴. 내년엔 거꾸로 GDP 낯게 나올 것으로 예상 (경제침체). show me the money(세수, 실제 경제)
 - 조시회피 : 역외에서 투자로 다시 들어옴 (???)
 - 주식 시장은 경기를 반영하는 것이 아니라 금리를 반영한다. 
-- 소프트파워 교역이 안된다 : 헐리우드 vs OTT : 비교역재과 교역재로 바뀜
+- 소프트파워 교역이 안된다 : 헐리우드 작가 등(파업 100일이 넘음) vs OTT : 비교역재과 교역재로 바뀜
+   
+<br>
 
 ### **김작가 : 안유화 (23.08.07녹화, 더플로)**
 - 책 더 플로
