--- a/docu/docu_0013.md
+++ b/docu/docu_0013.md
@@ -4,6 +4,7 @@
 - 김영익, 오건영, 빈센트, 이광수(부동산), 채상욱(부동산), 안유화(중국)
 
 내역
+   - 삼프로 In-Depth30 한상희 (23.08.16)
    - 삼프로 In-Depth30 이현지 (23.08.14)
    - 삼프로 : 문홍철 (23.08.14)
    - 김작가 : 안유화 (23.08.07녹화, 더플로)
@@ -19,6 +20,17 @@
   
 <br>
 
+### **삼프로 In-Depth30 한상희 (23.08.16)**
+- 7.12 나와서 현금 확보하라고 얘기 했음
+- 헬스케어, 제약, 음식료 등 증가  vs  가전, 가구 등 축소
+- 경기보다는 9월에 추가 금리 올리 것에 대한 우려 중
+- 파월의 임기 : 바이든이 목표 같을 듯 (내년 연말까지 금리 의미있는 하향)
+- 골디락스 : 경제 설명 어려울 때 그냥 하는 말 (떨어질 것 예상했는데 오를 때)
+- 잭슨홀미팅 : 작년 경험으로 주식 미리 빼고 있음, 7월에 했던 얘기랑 비슷하게 할 듯
+- 중국 : 외환보유고가 있기 때문에 위엔화 찍으면 됨 : 그렇게 되면 상당 기간 빌빌거릴 것임 : 리먼 사태처럼 가지 않을 듯
+  
+<br>
+
 ### **삼프로 In-Depth30 이현지 (23.08.14)**
 - CJ ENM
   - 영화.드라마 등 만든 회사 인수 후 적자, 미국 회사는 고정비 줄이기 힘들다
@@ -28,6 +40,8 @@
 - 빅 4
   - 기대치를 상회하는 실적을 냈었음 (콘서트, MD 를 통해서)
   - 팬텀이 커지고 있음. 세븐틴 700만장 (옛날것도 함께 팔아서500+), 누군지도 모르는 
+  
+<br>
 
 ### **삼프로 : 문홍철 (23.08.14)**
 - 장기금리는 미국 채무에 직접적인 영향 받음
