--- a/docu/docu_0013.md
+++ b/docu/docu_0013.md
@@ -4,6 +4,7 @@
 - 김영익, 오건영, 빈센트, 이광수(부동산), 채상욱(부동산), 안유화(중국)
 
 내역
+   - 삼프로 언더스탠딩 박수현 (23.08.17)
    - 삼프로 In-Depth30 한상희 (23.08.16)
    - 삼프로 In-Depth30 이현지 (23.08.14)
    - 삼프로 : 문홍철 (23.08.14)
@@ -18,6 +19,29 @@
    - 북언더스탠딩, 돈을 찍어내는 제왕 연준, 채상욱 (23.08.06)
    - 김작가 : 박은정(23.07.19녹화)
   
+<br>
+
+### **삼프로 언더스탠딩 박수현 (23.08.17)**
+- 정부 주도 투자도 빠지고 있는 상태로 받혀줄 것이 없다
+- 개인 부채 줄어들고, 기업 부채 늘어나고
+- **부동산 국유화**하는 것이 좋다. : 확실하게 원하는 방향으로 간다
+- 국유 부동산 업체의 주가는 굉장히 좋다
+- 헝다, 완다 문어발식 기업, 비구이위안은 부동산 전문업체 : 부동산에 문제 있구나
+- 1~2년 정도해서 정리해 나갈 것 같다
+- 16~18년 공급측 구조 조정 : 철강, 석탄, 조선, 화학, 유리 : 국유업체가 인수
+- 보조금 뿌렸지만, 부동산으로 갔다. 제조업쪽으로 돈이 가도록 하고 싶다
+- 짧게처리할지, 중기적으로처리할지 : 중기적으로 처리할 듯, 시위하는 것을 무서워 한다(?)
+- 벽계원 내년부터 달러 부채가 많다. 달러 부채는 상환 안할 것 같다. 
+- FDI 인도가 더 많아지고 있음. 신뢰의 부족
+- MSCI 중국 비중이 줄어들고 있음. 40% -> 30% 수준으로 줄어듦
+- 미국문제보다 부동산문제 : 제어 가능한 것 먼저, 외부 공격으로부터 취약한 지점 해결
+- 여행객들이 안 오게 되면 다시 되돌리기 힘들다. 이번에 확 풀다
+- 홍콩 : 달러페그제 : 달러 줄어들고 있음. 위안화 많이 통용되도록 조치중 : 본토에서 홍콩 주식 위안화로 바로 살 수 있도록 처리 : **본토로 바로 들어와라**, 위안화로 바꾸어서 들어와라
+- KB증권 : 신흥시장팀 아시아시장팀으로 변경 (중국 중심, 인도/베트남/일본 등으로 확장)
+- **알타시아(Altasia)** : 범아시아로 중국을 둘러싼다. 
+- 미국이 인도를 끌고 원하는 방향으로 가다. 인도도 미국쪽으로 노선 변경중
+- 인도 중국을 따라하다. : 스타업 키우는 중, 반도체 육성 펀드
+ 
 <br>
 
 ### **삼프로 In-Depth30 한상희 (23.08.16)**
