--- a/book/book_0125.md
+++ b/book/book_0125.md
@@ -42,23 +42,62 @@
 - 097 가치투자는 내재가치보다 현저하게 할인하여 주식을 매수하고 **그 가치가 실현될 때까지 보유**하는 투자 원칙
 - 097 가치보다 싸게 사려는 노력이 실패할 때도 있지만, 그것이 우리가 할 수 있는 최선의 선택이다
 - 099 주주의 요구수익률을 초과하는 초과이익을 기준으로 내재가치 평가하는 방법이 RIM
+
 <br>
 
 ### 104 4장 종목선정
+- 108 장기투자에 숨겨진 위대한 성공비결은 '중대한 손실을 피하는 것'
+- 110 한국의 우선주 DPS(주당배당)은 보통주 DPS에 연동되어 있으므로, 한국의 우선주는 채권형이 아니라 주식형이라고 보아야 한다
+- 111 채권투자에서는 돈이 안 되는 채권을 배체할 수 있는지가 더 중요하다
+- 112 부분 최적화가 전체의 최적화를 보장하지 않는다
+- 116 PER < 25,  PBR < 1.5,  PER*PBR < 22.5,  대형선도기업, 단기적인 수익성보다는 장기적인 배당 가능 여부
+- 120 경기 변동을 포함하여 10년 평균 ROA가 국채 3년물 채권수익률보다 3% 초과하는 기업 (주식위험 프로미엄을 3%로 산정)
+- 122 1~2% 더 얻는 대가로 원금 손실 위험을 떠안는 것은 불리한 거래다. 위험을 떠안고자 한다면 잘 되면 커다란 자본이득을 얻는다고 확신할 수 있어야 한다
+- 122 (버핏) 투자가 야구보다 훨씬 유리하다. 삼진아웃이 없기 때문이다. 스트라이크가 들어올 때까지 기다려서 치면 된다.
+- 125 CB, BW 등을 발행한다는 것은 일반사채로는 **자금 조달이 여의치 않다는 반증**이다
+- 126 KIKO환헤지 : 아주 좁은 범위에서만 제한된 이익이 발생하고 그 범위를 벗어나면 무한대의 손실이 발생
+- 127 조그만 이익이라도 손쉽게 얻으려고 하지 말아야 한다. (반드시 큰 위험이 도사리고 있다)
+- 134 신규 상장 주식의 **공모가**격은 대체로 비싸기 마련이므로 조심해야 한다
 
 <br>
 
 ### 136 5장 퀀트
-
+- 139 퀸트, 정량적, 데이터사이언스
+- 책 : 벤저민 그레이엄의 정량분석
+- 책 : 강환국, 할수있다 퀸트투자
+- 147 투자시 자제력을 갖고 사용할 수 있는 계량적 투자 고식을 만드는 것
+- 148 (버핏) 망치를 든 자에게는 모든 게 못으로 보이기 마련이다  /  정성적 분석을 외면하고 오로지 정량적 분석으로만 투자하려는 경향에 경고
+  
 <br>
 
 ### 150 6장 포트폴리오
+- 153 여러 종목으로 나누어 사면 변동성이 더 작아진다. 변동성이 더 작으면 기하수익(복리수익)이 더 높아 수익이 더 커진다 (10~30개)
+- 154 개별 기업의 불안정성은 철저한 분산투자를 통해서 극복할 수 있다
+- 154 버핏처럼 특정 기업에 대해 깊이 있게 이해할 수 있는 투자 전문가라면 가장 야심찬 종목에 목숨을 걸면 된다
+- 156 시장의 효율성이 계속 높아짐에 따라 펀드매니저가 내는 초과수익의 편차도 확실히 감소할 것으로 추정했다
+- 157 다우, 니케이255 : 가격가중
+- 158 KOSPI, TOPIX, S&P :  시가총액가중
+- 159 벤치마크 : 기회비용(국채금리)
+- 162 장기투자를 하려면 채권투자보다 주식투자가 훨씬 유리
+- 171 시장이 움직일 때 손을 놓고 있지 않고, 뭔가해야 할 일을 하게 된다는 점이 리밸런싱의 강점
+- 172 리밸런싱의 근본적인 목적은 위험을 통제하는 것이지 수익률을 향상시키는 데 있지 않다
+- 173 (동일비중 포트폴리오) 기업의 펀더멘털에 상관없이 모든 종목에 동일한 금액을 투자한다는 것 납득하기 어렵다
+- 173 그레이엄은 내재가치에 비해 주가가 매력적일수록 채권의 비중을 줄이고 주식의 비중을 늘려라
 
 <br>
 
 ### 186 7장 자산배분
+- 189 윌리엄 번스타인 : 장기적인 관점에서 성공적인 투자의 핵심은 다양한 자산군의 일관된 자산배분이다
+- 192 시장가격 변동에 따라 늘어난 자산을 줄이고 줄어든 자산을 늘리는 리밸러싱을 진행 : 자연스럽게 저가 매수 및 고가 매도 가능
+- 192 유대인 탈무드 : 자산을 3등분하여 부동산, 사업(주식), 현금으로 배분하라고 권고
+- 193 그레이엄은 아무리 보수적인 투자가도 포트폴리오의 최소한 25%는 주식에 투자하라
+- 197 정률투자법 : 주식 vs 채권, 50 vs 50 : 균형 무너지면 다시 리밸런싱
+- 197 정률투자법은 주가가 상승할수록 주식 비중을 높이려는 **치명적 유혹**에서 벗어날 수 있다
+- 201 장기 투자자는 연복리 수익률을 극대화하기 위해 산술평균보다 기하평균이 최대가 되는 포트폴리오 구성 필요
+- 204 약세장이 길어지면 추가 매수를 하면서 평가손실이 확대되어 **불리한 측면도 존재**하지만, 다시 **회복되면 저가에 많이 매수해둔 덕분**에 두드러지게 수익률 개선이 이루어진다
+- 213 한국 자산시장은 선진국 경제 개선폭보다 훨씬 더 큰 진폭을 가짐
 
 <br>
 
 ### 238 마치며
-
+- 242 아무리 좋은 자산배분 전략도 불완전할 수 밖에 없는 인간의 특성상 완벽하게 준수 어려움 : 원칙대로 운영할 시스템 갖추기
