--- a/docu/docu_0013.md
+++ b/docu/docu_0013.md
@@ -4,6 +4,7 @@
 - 김영익, 오건영, 빈센트, 이광수(부동산), 채상욱(부동산), 안유화(중국)
 
 내역
+   - 삼프로 언더스탠딩 홍춘욱 (23.08.22)
    - 삼프로 언더스탠딩 박수현 (23.08.17)
    - 삼프로 In-Depth30 한상희 (23.08.16)
    - 삼프로 In-Depth30 이현지 (23.08.14)
@@ -19,6 +20,43 @@
    - 북언더스탠딩, 돈을 찍어내는 제왕 연준, 채상욱 (23.08.06)
    - 김작가 : 박은정(23.07.19녹화)
   
+<br>
+
+### **삼프로 언더스탠딩 홍춘욱 (23.08.22)**
+- 책 : 대한민국 돈의 역사
+- 해외 기업들이 들어가서 어마어마한 투자 (제조부문 건설 투자), 20대 도시보다 전국 집값이 더 오르는 중)
+- 이민자 늘어남 (코로나때부터 대기중이던 인력 오버슈팅)
+- 에너지, 땅값 싸고, 임금 싸고
+- 제조업을 다시 일으키려고 했던 것이 지금 터짐
+- 연기금들 대도시 콘도(아파트) 활용 부동산펀드, 단독주택 부족
+- NO 이민, NO ESG, NO 중국 (트럼프)
+- 미국 내 노동력 부족으로 TSMC 가동 연기
+- 연준은 주식 시장이 고평가 되는 것을 두려워함 : 금리 인하 어렵다
+- 여행, 음식료 등 좋음 vs 마트에서 가전제품 구매 : 서비스쪽 좋음, 제조업은 올해 바닥, 신제품 등 모멤텀 있어야 하는데,,,
+- 달러 강세, 물가 낮음, 이민자, 임금 낮음 : 트럼프가 당선 안되면 이 스토리가 계속 이어질 것
+- 90년대 한국 주가 : 박스권 : 
+- 경제 어떤 문제가 생겨도 환율 뜸,  인구 줄어들고 , 주주 경시 정책
+- 피바다될 때 사는 것임. 가치 없는 시장임
+- 내(국내)가 잘 안 될 때를 대비해서 다른 곳에 투자 (달러)
+- 국내 부동산 / 달러 주식 (자산배분, 절대적인 것은 아니고 경향이 있다)
+- 조선, 자동차, 2차전지
+- 일본 먼저 한국 (엔 기준 말고 달러 기준, 프렌드쉽 효과, 인건비가 싸다 : 30년 동안 안 올랐다)
+- ETF 투자 해라, 금리 올라 갈 때 나스닥 불안하다 : 증자 안되면 망한다 (위워크)
+- 벤처 캐피털 보다 모기지 7.5%로 갈래
+- 패자부활전이 3년마다 이루어짐 : 우량주 장기투자 믿냐? : 세력 & 내부자도 아닌데 가능한가? : 세력들에게 설겆이 당하는 느낌 (대북테마주 시멘트)
+- 적대적 M&A 이루어지지 않는 나라에서는 싸다고 사면 안됨
+- 재벌의 1주와 개미의 1주가 등가가 아닌 우리나리 시장 아니다
+- 고점 34%에서 떨어지고 있다
+- 외국인 지분율이 시장평균보다 높거나 규제산업이 아닌 경우
+- 달러가 메인이고 한국시장은 서브다 (세계시장의 2%)
+- 항구적으로 비즈니스 좋을 때 배당 높아질 수 있다. (그런 회사 없다)
+- 대주주 3.4% (우회하면 50%), 97% 남에게 간다, 자회사로 터널링 (싼 이유가 있는 나라)
+- 일본 PBR 1배 미만 상장 폐지하겠다. (진행중)
+- 달러 대비 엔화 30% 저평가
+- 일본만큼 싼 나라는 중국 (중국 주식 저평가)
+- 개별 종목은 홍콩, ETF는 어쩔 수 없이 본토(상해)
+- 국유화로 진행, 
+
 <br>
 
 ### **삼프로 언더스탠딩 박수현 (23.08.17)**
