--- a/book/book_0126.md
+++ b/book/book_0126.md
@@ -4,6 +4,8 @@
 
 <br>
 
+## 1908 ~ 1945년
+
 ### 해에게서 소년에게 (최남선)
 - 해가 바다네
 - 신체시 : 정형적인 율격(3,4조)에서 벗어나 현대 자유시로 넘어가는 중간 단계
@@ -64,4 +66,28 @@
   
 <br>
 
-### 떠나가는 배 (49)
+### 깃발 (유치환)
+- 애수 : 매음을 서그프게 하는 슬픈 시름
+-
+- 이것은 소리 없는 아우성
+- 저 푸른 해원을 향해 흔드는
+- 영원한 노스탤지어의 손수건.
+- 순정은 물결 같이 바람에 나부끼고
+- 오로지 맑고 곧은 이념의 푯대 끝에
+- 애수는 백로처럼 날개를 펴다.
+- 아! 누구인가?
+- 이렇게 슬프고도 애닮은 마음을
+- 맨 처음 공중에 달 줄은 안 그는
+  
+<br>
+
+### 낡은 집 (이용악)
+- 북쪽을 향한 발자욱만 눈 위에 떨고 있었다.  :  야밤에 그 가족들은 북쪽으로 사라졌다
+- 
+- 꽃피는 철이 와도 가도 뒤 울 안에
+- 꿀벌 하나 날아들지 않는다.                : 뭔지 모를 서글픔
+
+<br>
+
+## 1945 ~ 1950년대 
+
