--- a/my/my_0110.md
+++ b/my/my_0110.md
@@ -1,5 +1,42 @@
 # 금융 
 
+## ISA
+
+  - 전 금융기관 1개만 소유 가능 (필요하면 계죄이관 : 현금화 이후에 이전 가능)
+    - 난 중개형 (ETF거래) <--> 신탁형(상품 매수/매도/교체 직접), 일임형
+    - 금융사마다 운용상품 다름
+  - 계약기간/한도
+    - 최소 3년, 최대 5년 (필요시 개별적으로 연장신청해야 함 : ELS 만기 등 고려)
+    - 계약 기간 내에도 원금에 대해서는 출금 가능 (다시 입금 가능액으로 증가되지는 않습니다)
+    - 1년 2천만원, 5년 1억 : 이월 가능
+    - ISA 만가후 재가입시 한도 새로 만들어짐 (기존 계좌에서 입금한 금액 있더라도, 신규 계좌 2000만원 한도 새로 생성)
+  - 세금
+    - 200만원 비과세, 초과 금액 저율 과세 (9.9%)
+    - 손익통산이나, (중개형) 국내 주식/ETF는 이미 비과세이므로 해당 사항 없음 : 별로 메리트가 없는 것 같기도 하고
+    - 만기보유와 동일한 해지사유 : 6개월 이내에 발생한 천재지변, 퇴직, 폐업, 3개월 이상의 입원 또는 요양을 요하는 상해· 질병
+  - 연금계좌로 이전
+    - ISA 계좌 만기일로부터 60일 이내
+    - 계좌 잔액의 전부 또는 일부를 연금계좌로 불입시 10%(최대 300만원 한도)를 연금계좌 불입액에 포함해서 세액공제 가능
+      - 3000만원 이전시 300만원 세액공제 가능 (300*13.2%=39만6천원)
+      - 연금한도가 추가적으로 300만원 증액 효과
+      - 연금 : 2700만원 세액공제 안 받은 금액 / 300만원 세액공제 받은 금액  --> 금융회사에 당해분 소득공제 금액으로 전환해 달라고 요청 가능
+        - 연말 지나서 2700만원 출금 (연말정산은 받아야지)
+
+
+<br><br> 
+
+## 연금저축 vs IRP
+
+  - 세액공제 한도 초과 금액 : 중도인출 및 연금수련시 과세대상이 되지 않음
+  - 세액공제는 13.2%, 중도해지시에는 16.5% 부담
+  - 70세 이하 (5.5%), 80세 이하(4.4%), 80세 이상(3.3%)
+  - 퇴직소득세율 (30% 절감 효과)
+  - 연금수령액이 연간 1200만원 초과시 종합과세
+  - 합쳐서 1800만원 한도
+
+
+<br><br> 
+
 ## 펀드 수수료
 
   - **C형 : 온라인으로 수수료(선취, 후취) 없음** / 총보수만 있음 --> 메일 수수료 땜
