--- a/book/book_0129.md
+++ b/book/book_0129.md
@@ -79,9 +79,9 @@
 
 058 (2016) 대학 졸업자에게 가장 바람직한 것으로 꼽히는 기술은 바로 '리더십'이라는 인각적 특성이다 (협업할 수 있는 능력)
 
-060 컴퓨터가 수많은 중요한 시스템에 대해 통제력을 발취하게 된다면 대혼란이 빚어질 소지도 있다
+060 컴퓨터가 수많은 중요한 시스템에 대해 통제력을 발휘하게 된다면 대혼란이 빚어질 소지도 있다
 
-061 블랙박스(AI)를 열어서 그것이 본디하도록 되어 있는 일을 하고 있는지 파악할 수 있는 배경 기술을 갖춘 인재로 훨씬 더 많이 고용해야 합니다
+061 블랙박스(AI)를 열어서 그것이 본디하도록 되어 있는 일을 하고 있는지 파악할 수 있는 배경 기술을 갖춘 인재를 훨씬 더 많이 고용해야 합니다
 
 063 (법률 하급 업무) 외주화가 인공지능에 힘입은 완전화 자동화에 자리를 내주었다
 
@@ -90,9 +90,9 @@
 
 068 (GE) 자사 제품이 잘 작동할 수 있도록 무수한 데이터를 모니터링하는 작업
 
-076 소프트웨어가 세계를 잠식해가고 있기에 우리는 소프트웨어 개발자를 필요로 한다. 하지만 소프트웨어가 식사를 모두 마치고 소화 단계에 접어들 무렵에는 우리에게 또 무ㅇ이 필요할지 지금으로서는 가늠할 길이 없다
+076 소프트웨어가 세계를 잠식해가고 있기에 우리는 소프트웨어 개발자를 필요로 한다. 하지만 소프트웨어가 식사를 모두 마치고 소화 단계에 접어들 무렵에는 우리에게 또 무엇이 필요할지 지금으로서는 가늠할 길이 없다
 
-077 고차원의 비판적 사고는 회계법인, 제억회사, 구글 등 주도적인 첨단 기술 기업 같은 곳에서 일할 때 중요하게 요구되는 자질이다
+077 고차원의 비판적 사고는 회계법인, 제약회사, 구글 등 주도적인 첨단 기술 기업 같은 곳에서 일할 때 중요하게 요구되는 자질이다
 
 077 비판적 사고 : 아이디어를 능숙하게 분석한 다음 그것을 유용하게 적용하는 능력
 
@@ -110,7 +110,7 @@
 
 087 수렴적 사고 vs 확산적 사고
   - 확산적 사고는 흔히 발랄함, 호기심, 기꺼이 위험을 감수하고자 하는 태도와 관련
-  - 수렴적 사고는 학교에서 가르치는 교육의 방향으로 로봇이 점점 더 잘 해나가게 될 그런 종류의 사고다
+  - 수렴적 사고는 학교에서 가르치는 교육의 방향으로 로봇이 점점 더 잘 해 나가게 될 그런 종류의 사고다
 
 089 학교는 실패나 잘못된 답에 대해 수치심을 심어줌으로써 학생들의 창의성을 억누르도록 가르치고 있다
 
@@ -120,7 +120,7 @@
 
 099 인간 문해력은 우리에게 다른 사람과 관계를 맺고 의사소통하여 아름다움과 품격이라는 인간적 역량에 다가갈 수 있는 힘을 부여함으로써 우리를 사회적 환경에 대비시킨다
 
-099 인문학은 잘 살아갈 수 있는 삶의 토대와 문명화한 인간이 갖추어야 할 자칠을 키워준다
+099 인문학은 잘 살아갈 수 있는 삶의 토대와 문명화한 인간이 갖추어야 할 자질을 키워준다
 
 100 학문 분야들은 점차 범학문적인데다 복잡하게 변해가고, 일도 점점 더 혼합적으로 달라지다 보니 더욱 많은 발견이 개인이 아닌 팀에 의해 이루어집니다
 
@@ -143,15 +143,15 @@
 기업가 정신
 - 110 65퍼센트가 장차 지금은 존재하지 않는 직종에 종사하게 될 것이다. 테크놀로지는 위협이라기 보다 기회의 원천이다. 잠재력 있는 새로운 직종을 창출한다(기업가정신)
 - 112 고급 기계가 직장에서 급속히 늘어남에 따라 기업가 정신을 지닌 사람의 수가 많아져야 할 필요성은 한층 커지고 있다
-- 112 '조기에 실패하지', '자주 실패하자'는 말은 이제 실리콘밸리에서 널리 회자되는 주문이다
+- 112 '조기에 실패하자', '자주 실패하자'는 말은 이제 실리콘밸리에서 널리 회자되는 주문이다
 
 문화적 민첩성
-- 114 직업 종사들이 여러 문화가 존재한 상황에서 업무를 성공적으로 수행하도록 이끄는 더없이 중요한 능력이다
+- 114 직업 종사들이 여러 문화가 존재하는 상황에서 업무를 성공적으로 수행하도록 이끄는 더없이 중요한 능력이다
 - 114 감정이입, 신중함, 미묘한 뉘앙스를 알아차릴 수 있는 능력 따위가 요구된다
 - 114 어떤 문화권에 깊숙이 슬며들어 문화적 배경이 상이한 사람들로 이뤄진 집단에서 스스럼없이 어우려지거나 자신과 판이한 삶을 사는 사람들로부터 만족스러운 결과를 얻어낼 수 있는 능력이다
 - 115 직종을 바꿀 때에도 더할 나위 없이 요긴한 자질이다
 - 117 맥락 : 세계화된 경제는 비즈니스에서야 국경을 제거했지만, 인간이 살아가고 작업하는 복잡한 맥락에서는 여전히 국경을 없애지 못했다
-- 120 인간은 로봇과 달리 자신을 둘러싼 환경과 자신의 삶을 온적하게 탐험하면서 스스로의 감각을 발휘하는 과정을 통해 가장 깊은 의미의 학습에 도달한다. (이야기를 듣는 것 못지않게 주인공으로서 참여해 행동하는 것도 중요하다)
+- 120 인간은 로봇과 달리 자신을 둘러싼 환경과 자신의 삶을 온전하게 탐험하면서 스스로의 감각을 발휘하는 과정을 통해 가장 깊은 의미의 학습에 도달한다. (이야기를 듣는 것 못지않게 주인공으로서 참여해 행동하는 것도 중요하다)
 
 <br>
 
