--- a/book/book_0129.md
+++ b/book/book_0129.md
@@ -157,6 +157,56 @@
 
 ### 4. 경험 학습 : 경험의 중요성
 
+123 왓슨 같은 컴퓨터는 데이터 속에 던진 그물망을 샅샅이 훓어 패턴을 알아내는 식으로 실력을 키운다
+- 데이터셋을 확장하면 가능하다. 하지만, 인간은 그러하지 않다
+
+124 맥락을 이해하지 못하고 초보적인 실수를 한다. 기계는 인간이 처한 맥락을 완벽하게 고려할 수도 인식할 수도 없다
+
+125 인간 학습자는 프로그래밍의 대상에서 벗어나 스스로의 정신을 업그레이드한다
+
+126 경험 학습은 교실과 실생활 경험을 통합한다는 점에서 전통적인 방식과는 다른 모델로, 대학 캠퍼스의 문을 활짝 열어젖히며 전 세계를 잠재적인 교실, 도서관, 실험실로 간주한다
+
+126 분명히 말하건데 학습은 우리가 행동하고 생각할 때 이루어진다
+
+126 교실에서 배운 내용을 삶이라는 맥락에 적용하는 것과 실생활에서 얻은 지식을 교실이라는 맥락에 되비쳐 보는 것은 분명 상방향적이다
+
+127 여러모로 경험 학습은 삶에서 접할 수 있는 가장 수준 높은 개별화 교육의 엔진이다
+
+127 학습자는 그 어떤 기계도 경험할 수 없는 방식으로 무언가를 배운다.변화하는 현실에 끊임없이 적용함으로써 생각지도 못한 관련성을 발견하거나 관계를 맺는다. 자신의 창의성과 정신적 유연성을 확장한다 -> 로봇으로 대체할 수 없는 존재가 된다
+
+129 연습이 효율적이려면 학습을 필히 **구조화된 순서**를 따라야 한다.
+
+129 학습자는 어떤 복잡한 주제에 통달하기 위해 거기에 필요한 기본적 기능을 '**습득**'해야 한다. 그것은 주어진 맥락에 '**통합**'하는 연습을 해야 한다. 자신이 배운것을 상이한 매락에 '**적용**'해야 한다.
+
+131 습득과 통합은 학교 상황에서도 이루어진 수 있다
+
+131 전이는 학생이 어떤 맥락에서 배운 기능과 지식을 다른 맥락에 성공적으로 적용할 때 일어난다
+
+132 완전히 새로운 상황과 마주하지만 한 걸음 물러서서 그 맥락에 발을 들여놓은 채 스스로의 지식을 활용해 문제 해결 방안을 모색할 수 있다. (근거리전이/원거리전이, 어떤 교육자는 원거리전이가 교육의 궁극적 목적)
+
+133 학생들은 익숙한 맥락에 지나치게 의존하고 있어 새로운 상황에 유연하게 이행하지 못한다. 무엇에 대해서는 그럭저럭 안다고 할 수 있지만 '왜'에 대해서는 속 시원하게 답하지 못할 가능성이 높다. 이러한 난관을 극복하는 비결은 여러 맥락에 걸쳐 있는 이론적 지식과 생생한 겸험을 결합하는 것이다 (물속 과녁 맞추기 : 경험 통한 반복 학습, 빛의 굴절에 대한 학습, 다른 깊이에서도 다른 팀보다 더 높은 점수 받음) (강사나 감돔의 즉각적 피드백 -> 전이 촉진)
+
+134 기계는 인식 가능한 문제에 관한 지식을 찾아 제시하는 능력, 즉 근거리 전이 능력에서는 일취월장하고 있음에도 불구하고 원거리 전이에서는 좋은 성과를 낼 수 없다
+
+134 성장 사고방식(캐럴 드웩) <--> 고정 사고방식
+- 타고난 재능이나 환경은 굳어진 맥락이 아니라 개선을 향해 가는 출발점에 불과
+- 탄성회복력(resilience)과 집요함(perseverance)
+
+139 산학협력교육은 대체로 6개월 동안 진행되며, 프로그램을 마친 학샘들은 학교라는 동지로 다시 복귀한다
+
+142 디브리핑은 매우 중요한 요소다. (피교육자들이 교육 기간 동안 배우고 익힌 것과 향후 활동 계획을 질의응답을 통해 정리하는 과정)
+
+145 그 어떤 컴퓨터도 상황을 이처럼 폭넓게 조망하고 자신이 일하는 회사라는 생생한 맥락에서 지체 없이 정확한 결정을 내리지는 못했다. (보험계리사, 재보험을 들 것인가? 취급을 중단할 것인가?)
+
+146 구글 번역이 일을 거들어주었다. 하지만, 어떤 이야기가 진실인지 완전히 꾸며낸 것이진 확인하는데 도움을 주지는 못했다. (뉴스필터링 작업)
+
+149 젊은 자메이카 계약 직원들을 저숙련 테크놀로지 억무에 고용하는 것은 그 일을 자동화하기 위해 노력하는 것보다 훨씬 저력하고 효율적이다.
+
+151 출신이 다양한 학생들록 이루어진 조직이 안겨주는 교육적 중요성은 아무리 강조해도 지나치지 않는다
+
+152 기업가적 소양을 길러주려면 상이한 아이디어를 경험해ㅏ고 거기에 노출될 수 있는 선택의 기회를 폭넓게 제공해야 한다
+
+
 <br>
 
 ### 5. 평생 학습 : 삶을 위한 학습
