--- a/book/book_0129.md
+++ b/book/book_0129.md
@@ -2,6 +2,12 @@
 
 초판 1쇄 발행일 2019.05.30, 출판사:에코 리브르, 지은이:조지프 E. 아운, 옮긴이:김홍옥 
 
+- 맥락의 이해 / 개인이 아닌 팀으로 활동
+- 소프트웨어 이후의 시대
+- 좋은 일자리 감소 / 좋은 기계를 제어하는 능력
+- 습득 - 통합 - 적용 / 원거리 전이 / 인문학의 중요성
+- 평생교육 / 지속적인 학습을 통한 발전
+
 <br>
 
 ### **머리말**
@@ -196,19 +202,58 @@
 
 142 디브리핑은 매우 중요한 요소다. (피교육자들이 교육 기간 동안 배우고 익힌 것과 향후 활동 계획을 질의응답을 통해 정리하는 과정)
 
-145 그 어떤 컴퓨터도 상황을 이처럼 폭넓게 조망하고 자신이 일하는 회사라는 생생한 맥락에서 지체 없이 정확한 결정을 내리지는 못했다. (보험계리사, 재보험을 들 것인가? 취급을 중단할 것인가?)
+145 그 어떤 컴퓨터도 상황을 이처럼 폭넓게 조망하고 자신이 일하는 회사라는 생생한 맥락에서 지체 없이 정확한 결정을 내리지는 못했다. (보험계리사가 되어 허리케인에 대해서 재보험을 들 것인가? 취급을 중단할 것인가?)
 
 146 구글 번역이 일을 거들어주었다. 하지만, 어떤 이야기가 진실인지 완전히 꾸며낸 것이진 확인하는데 도움을 주지는 못했다. (뉴스필터링 작업)
 
-149 젊은 자메이카 계약 직원들을 저숙련 테크놀로지 억무에 고용하는 것은 그 일을 자동화하기 위해 노력하는 것보다 훨씬 저력하고 효율적이다.
+149 젊은 자메이카 계약 직원들을 저숙련 테크놀로지 업무에 고용하는 것은 그 일을 자동화하기 위해 노력하는 것보다 훨씬 저렴하고 효율적이다.
 
-151 출신이 다양한 학생들록 이루어진 조직이 안겨주는 교육적 중요성은 아무리 강조해도 지나치지 않는다
+151 출신이 다양한 학생들로 이루어진 조직이 안겨주는 교육적 중요성은 아무리 강조해도 지나치지 않는다
 
-152 기업가적 소양을 길러주려면 상이한 아이디어를 경험해ㅏ고 거기에 노출될 수 있는 선택의 기회를 폭넓게 제공해야 한다
-
+152 기업가적 소양을 길러주려면 상이한 아이디어를 경험하고 거기에 노출될 수 있는 선택의 기회를 폭넓게 제공해야 한다
 
 <br>
 
 ### 5. 평생 학습 : 삶을 위한 학습
 
+167 고등교육은 집단으로서 학생들에게 봉사해야할 뿐 아니라 개개인에 맞춘 개별화한 방식으로 개인 학습자에게 기여하도록 재정비되어야 한다
+
+167 고등교육은 커리어를 이어가는 내내 학습자에게 기여하지 않으면 안된다
+
+168 누구도 예외없이 기계의 진보에 조응해 자신의 지식과 기능 세트를 지속적으로 재편성하고 새롭게 하고 발달시켜야 한다
+  - 평생학습은 모두가 소중한 기능을 개발하고 유지하도록 도움으로서 사회 불평등을 완화하는데 이바지한다
+
+172 커뮤니티 칼리지는 미국 사회에서 가장 혜택받지 못한 취약 계층을 평생학습자로 끌어 안음 : 취약 계층에는 테크놀로지 변화에 의해 위협받는 이들까지 포함된다
+
+177 평생 학습은 직업 종사자가 계속 직업적 발전을 도모할지, 아니면 서서히 경제적 멸종으로 치달을지를 좌우하는 요소가 될 것이다
+
+178 미래의 평생 학습 모델에서는 대학이 고용주나 학습자와 긴밀한 협조를 통해 교육과정을 함께 설계해야 한다
+
+182 온라인 프로그램(교육)은 학습자들이 언제 어디서 그 프로그램을 원하든 간에 학습을 전달해 준다 (하지만, 내용이 지나치게 포괄적이다. 모든 사람들을 대상으로 하기 때문에)
+
+182 (온라인 수업 혹은 대면 수업) 혼합형 학습 프로그램에 노출된 학생들이 최고의 성과를 거두었다
+
+183 전형적인 온라인 형태도 혼합형 학습 형태도 경험적 요소를 가미하지 않으면 그 가치가 지극히 제한적일 수 밖에 없다
+
+183 (경험 많은 학습자) 과거의 경험을 되돌아보고 그 경험을 자기 행동과 생각을 재검토하는 도구로 삼음으로서 스스로의 목적을 달성하고 새로운 기회와 경험을 창출하는 더 나은 위치에 올라설 수 있다
+
+186 흔히 평생 학습자들은 취업 혹은 자신에 직업이력이나 인생에라는 좀 더 큰 틀 속에서 본인이 꿈꾸는 구체적인 목적을 달성하는 데 필요한 일련의 지식, 기능, 기술을 얻고자 한다
+
+<br>
+
+### 맺은말
+
+202 과학적 진보는 우리 국가의 안보, 건강의 개선, 더 많은 일자리, 생활 수준의 향상, 문화적 진보에 가장 중요한 요소 (1944 부시 박사가 루스벨트 대통령에게)
+
+202 사회적 합의 : 정부는 지원금을 쏟아부었고 대학은 새로운 산업과 직업의 모태가 되어준 새로운 지식을 제공했다
+
+204 새로운 사회적 합의 아래서는 기업이 대학의 교육 프로그램을 설계하고 제공하는 데 적극적으로 참여해야 한다
+
+207 중국은 로봇공학에 수십억 위안을 쏟아부음으로서 중국의 산업 부문 전역에 걸쳐 대규모로 적극적인 자동화 프로그램을 실시하기 시작했다 (자국 경제를 제조업 기반에서 서비스업 기반으로 전환하려는 것이다)
+
+207 한국은 세계에서 산학 공동 연구의 비율이 가장 높다
+
+208 똑똑한 기계의 출현은 응용 학문, 즉 실용적인 과목을 공부해야 보수 많은 커리어를 기대할 수 있다는 생각을 확실하게 날려버린다
+
+209 무비판적으로 회사 정책을 따르는 회식의 조직순응자 -> ???
 
