--- a/book/book_0131.md
+++ b/book/book_0131.md
@@ -36,7 +36,7 @@
 
 ## **02. 평등신화 붕괴의 요인을 찾다**
 
-장기불활에 따른 실업률 증가
+장기불황에 따른 실업률 증가
 - 실업률 / 구직포기자도 고려 필요 (일은 하고 싶지만 장기불황으로 구하기 힘듦)
 - 실업기간의 증가
 
@@ -63,19 +63,57 @@
 
 ## **03. 격차의 진행 속에서 - 지금 무엇이 일어나고 있는가**
 
-018 블라
+실태조사
+- 고령자
+- 모자가정, 독거노인(노인부부에 비해 2배 이상 높음, 가족간의 경제적 지원 약해짐)
+- 청년층 (불경기)
+
+최저임금
+- 최저임금이 선진국의 절반 수준
+- 최저임금이 생활보호제도 지급액보다 적음
+
+사회현상
+- 인재가 대기업에서 소득이 많은 금융기업으로 
+- 의대과열 : 특히 성형외과 (리스크 적고 고소득)
+- 개인의 법인화 : 법인세가 개인소득세보다 낮음
+
+공공사업을 통한 지역간 격차 해소가 줄어듦
+
+기회의 평등 : 전원참가의원칙, 비차별의원칙
+- 교육 (본이의 능력, 부모의 소득, 부모의 교육수준)
+- 입시에 특화된 사립고
+- 교육의 공적 지출 삭감 : 의무교육을 마치면 부담하는 교육비 커짐
+- 사회이동의 정도가 낮아짐 (부모의직업 vs 자식의직업)
 
 <br>
+
 
 ## **04. 격차사회의 방향을 생각하다**
 
-018 블라
+경제 효율을 위해서는 격차 확대는 피할 수 없는 것인가?
+- 효율성과 공평성의 트레이드오프
+- 수확체감의 법칙 : 유능한 사람에게 높은 소득을 주더라도 거기서 얻을 수 있는 경제 효율의 효과는 한계가 있다
+
+빈곤층 증가는 사회적 문제를 야기시킨다
+- 낮은 임금은 근로의욕을 낮춘다
+- 실업자의 양산 : 인적자원의 낭비 (자원의 손실이다)
+- 범죄 증가 가능성
+- 사회적 부담 증가 : 공적인 경제 원조의 대상이 됨
+
+격차 확대
+- GatedTown : 부유층만의 사회
+- 카트리나 사태 : 부유층은 대부분 탈출에 성공했지만,,,
+- 건강격차 확대 : 먹거리, 의료(의료보험개혁 실패)
+
+니트족60(부모의 기대)과 프리터족200(아르바이트)
+- 비자발적 프리터가 전국민적으로 400만까지
+
+계층의 고착화 그대로 둘 것인가
+- 빈곤층을 최대한 줄이는 정책
+- 유능한 사람이 대우받는 사회
 
 <br>
+
 
 ## **05. 격차사회를 위한 처방전 비복지국가에서 벗어나기**
-
-018 블라
-
-<br>
 
