격차사회 완료

--- a/book/book_0131.md
+++ b/book/book_0131.md
@@ -1,8 +1,7 @@
 # 격차사회
 
-초판 1쇄 발행일 2019.04.08, 출판사:믹스커피, 지은이:윤현희 
-
-- 
+초판 1쇄 발행일 2013.09.15, 출판사:세움과비움, 지은이:다치바니키 도시아키, 옮긴이:남기훈 
+- 일본에서 2006년에 발간된 책임을 감안해서 읽어야 함
 
 <br>
 
@@ -77,10 +76,10 @@
 - 의대과열 : 특히 성형외과 (리스크 적고 고소득)
 - 개인의 법인화 : 법인세가 개인소득세보다 낮음
 
-공공사업을 통한 지역간 격차 해소가 줄어듦
+공공사업을 통한 지역간 격차 해소가 줄어듦 (재정적자 축소위해 사업 줄어듦)
 
 기회의 평등 : 전원참가의원칙, 비차별의원칙
-- 교육 (본이의 능력, 부모의 소득, 부모의 교육수준)
+- 교육 (본인의 능력, 부모의 소득, 부모의 교육수준)
 - 입시에 특화된 사립고
 - 교육의 공적 지출 삭감 : 의무교육을 마치면 부담하는 교육비 커짐
 - 사회이동의 정도가 낮아짐 (부모의직업 vs 자식의직업)
@@ -105,7 +104,7 @@
 - 카트리나 사태 : 부유층은 대부분 탈출에 성공했지만,,,
 - 건강격차 확대 : 먹거리, 의료(의료보험개혁 실패)
 
-니트족60(부모의 기대)과 프리터족200(아르바이트)
+니트족60(부모의 기대)과 프리터족200(아르바이트, 청년층)
 - 비자발적 프리터가 전국민적으로 400만까지
 
 계층의 고착화 그대로 둘 것인가
@@ -117,3 +116,29 @@
 
 ## **05. 격차사회를 위한 처방전 비복지국가에서 벗어나기**
 
+경제 효율 향상에 공헌할만한 사람들이 배제되는 것 막아야 함
+
+세금을 징수당하면 근로의욕을 읾는가?
+
+북유럽의 고복지. 고부담 (핀란드 노키아, 스웨덴 에릭슨, 볼보)
+
+동일노동 동일임금 (비정규직 격차 해소)
+
+직업훈련
+- 공공부문의 적극적인 관여 필요
+- 기업에서 직업훈련을 시켜도 결국 그만둘지 모른다
+
+교육제도
+- 장학금 제도 충실히
+- 공립학교 교육 충실도 향상
+- 직업교육 (대학들어가기 위한 교육이 아니라)
+
+복지제도
+- 엄격한 생활보호 대상자 지정 절차 및 기준
+
+세금
+- 소득세 누진도
+- 역진성 높은 소비세
+- 소비세를 기초연금 재원으로 사용하면 어떨까? (의료 등 필수분야 제외 ???)
+
+사회보장급여 축소하는 정책을 사용했지만, 고령화로 인하여 GDP에서 차지하는 비율은 증가함
