--- a/my/my_0110.md
+++ b/my/my_0110.md
@@ -1,5 +1,20 @@
 # 금융 
 
+## 연금저축 vs IRP
+
+  - **IRP 입금 후 출금 안됨 (연금저축과 다름)**
+  - 이관시 매도후 현금으로 이관됨
+  - KB : (이율 : **24.04.26 : 3.48%**), (거래내역 : **자산뱅킹-MY자산현황-거래내역**)
+  - 세액공제 한도 초과 금액 : 중도인출 및 연금수련시 과세대상이 되지 않음
+  - 세액공제는 13.2%, 중도해지시에는 16.5% 부담
+  - 70세 이하 (5.5%), 80세 이하(4.4%), 80세 이상(3.3%)
+  - 퇴직소득세율 (30% 절감 효과)
+  - 연금수령액이 연간 1200만원 초과시 종합과세
+  - 합쳐서 1800만원 한도
+
+
+<br><br> 
+
 ## ISA
 
   - 전 금융기관 1개만 소유 가능 (필요하면 계죄이관 : 현금화 이후에 이전 가능)
@@ -21,18 +36,6 @@
       - 연금한도가 추가적으로 300만원 증액 효과
       - 연금 : 2700만원 세액공제 안 받은 금액 / 300만원 세액공제 받은 금액  --> 금융회사에 당해분 소득공제 금액으로 전환해 달라고 요청 가능
         - 연말 지나서 2700만원 출금 (연말정산은 받아야지)
-
-
-<br><br> 
-
-## 연금저축 vs IRP
-
-  - 세액공제 한도 초과 금액 : 중도인출 및 연금수련시 과세대상이 되지 않음
-  - 세액공제는 13.2%, 중도해지시에는 16.5% 부담
-  - 70세 이하 (5.5%), 80세 이하(4.4%), 80세 이상(3.3%)
-  - 퇴직소득세율 (30% 절감 효과)
-  - 연금수령액이 연간 1200만원 초과시 종합과세
-  - 합쳐서 1800만원 한도
 
 
 <br><br> 
