--- a/book/book_0132.md
+++ b/book/book_0132.md
@@ -82,3 +82,25 @@
 075 편안한 공간, 익숙한 생각에서 벗어나야 우리의 잠재력이 발휘되고, 미처 몰랐던 강점과 능력도 드러난다
 
 076 금융의 본질, 투자의 본질이 바로 리스크 테이킹 아니던가. 위험을 떠안지 않고 경제적 자유를 이루겠다는 바람은 불가능한 꿈이다
+
+<br>
+
+## **02. ROE에 숨어 있는 시대흐름과 투자 방향**
+
+081 투자에 대해 한마디로 요약하지면 ROE에서 시작되어 ROE에서 마무리된다
+
+082 투자는 시간을 들여야 하는 동시에, 현재의 소비를 줄임으로써 미래 소득을 확대하려는 모든 행위와 노력이라는 점이다
+
+086 사실 정확한 내재가치를 추정하는 것은 불가능하다
+
+086 워렌 버핏은 현금흐름에 적용되는 적정 할인율은 장기국채 수익률로 보고 있다. GDP성장율에 배당율을 더하고 거래 등 마찰비용 1.5% 정도를 차감해서 추정한다
+
+090 모든 자산의 가격은 장기적으로 내재가치에 수렴한다
+
+091 시장의 미래는 누구도 예측할 수 없다 (Random Walk)
+
+092 단기 주가를 예측하려는 것은 처음부터 없는 답을 쫗는 것과 같다 (사업성분석이 중심이 되어야 한다)
+
+092 사업을 정확하게 판단하는 것과 동시에 무섭계 확산하는 시장 심리에 휩쓸리지 않을 때 성공할 것이다 (워렌 버핏)
+
+093 가치에 대한 확고한 신념이 있어야만 수익이 발생하지 않는 기간을 버텨낼 수 있다
