--- a/book/book_0132.md
+++ b/book/book_0132.md
@@ -104,3 +104,35 @@
 092 사업을 정확하게 판단하는 것과 동시에 무섭계 확산하는 시장 심리에 휩쓸리지 않을 때 성공할 것이다 (워렌 버핏)
 
 093 가치에 대한 확고한 신념이 있어야만 수익이 발생하지 않는 기간을 버텨낼 수 있다
+
+095 기업이 자신의 자본으로 돈을 얼마나 버는지 알려주는 숫자가 있다. 자기자본이익률, 바로 ROE다 (당기순이익/자기자본*100)
+
+096 산업별로 기준이 다르겠지만 적어도 ROE 15%도 참고기준으로 활용 가능 (버핏 15% 이상만 투자해라)
+
+097 ROE를 구하는 공식에서 분자에 들어갈 순수 영업이익 말고도 혹시 다른 조건이 보태져 숫자가 높게 나타났는지 확인해야 한다 / 기업의 부채가 늘어나도 ROE가 높아진다
+
+098 ROE가 높게 나왔더라도 PER, PBR, EPS자료를 함께 살펴야 해당 기업의 주가가 적정한지를 정확히 알 수 있다
+
+099 PBR = ROE * PER,  (시가총액/자기자본 = 당기순이익/자기자본 * 시가총액/당기순이익)
+
+104 주식이 저평가된 원인을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행ㅎ는 사업을 하는 기업일 수 있음을 체크해야 한다
+
+105 PER 30배 이하, PBR 5배수 아래인 종목은 저평가 가능성이 있음
+
+106 PBR 혹은 PER이 낮은 회사보다 ROE가 지속적으로 높은 회사를 투자의 대상으로 삼아야 한다
+
+112 투자하려는 기업의 섹터가 국가의 지원을 받는지, 정부가 해당 사업에 예산을 많이 책정했는지, 해당 섹터의 수요를 확대하기 위한 정부의 노력이 무엇인지를 알아야 한다 (**정부의 정책 흐름**)
+
+113 중국 : 도태될 산업은 시장에 맡김(석탄산업) vs 미래 첨단산업은 투자 확대(반도체)
+
+116 생산요소 투입형 경제(한국, 중국)의 가장 큰 특징은 생산요소 한계 생산력이 떨어진다는 것이다
+
+117 미중 갈등이 확대되면서 유럽을 포함해 국가별로 공급망 안전을 우선순위로 내세우고 있다 (제조업 강국 한국은???)
+
+119 시간이 지날수록 과거 한국기업이 잘하고 있었지만, 부가가치가 떨어지는 산업에 희망을 걸고 계속 투자하는 건 어리석은 판단이 될 공산이 크다
+
+120 통화량과 통화지표는 ROE 공식 중 분자 부분인 유동성 확대로 수요를 결정하는 정책이다
+
+126 해당 국가가 거시경제 혹은 산업 측면에서 구조적 문제가 있으면 단순한 유동성 확대는 기업의 ROE를 장기적으로 상승시키는 데 한계가 있다
+
+
