--- a/book/book_0132.md
+++ b/book/book_0132.md
@@ -6,9 +6,9 @@
 
 ## **01. 투자란 시대적 흐름에 배팅하는 것**
 
-020 영화 관상 : 나는 사람의 얼굴을 봤을 뿐, 시대의 모습을 보지 못했소. 시시각각 변하는 파도만 본 격이지. 바람을 봐야 하는데. 파도를 만드는 건 바람인데 말이오
+020 영화 "관상" : 나는 사람의 얼굴을 봤을 뿐, 시대의 모습을 보지 못했소. 시시각각 변하는 파도만 본 격이지. 바람을 봐야 하는데. 파도를 만드는 건 바람인데 말이오
 
-022 바람직한 현상은 아닐지라도, 지금은 경제랙의 유무가 그 사람의 지위와 역할까지 결정하는 강력한 증표가 되었다
+022 바람직한 현상은 아닐지라도, 지금은 경제력의 유무가 그 사람의 지위와 역할까지 결정하는 강력한 증표가 되었다
 
 023 시대흐름이란 세상을 지배하는 기술과 자본 및 소비의 흐름을 총칭한다. 흐름을 알아야 부의 반열에 오르고, 경제적 자유도 실현할 수 있다
 
@@ -24,7 +24,7 @@
 
 035 소문이 더 멀리 퍼져 사람이 몰려들기 전에 미리 흐름에 올라타는 것이 관건이다
 
-037 내일의 종가를 맞히는 것보다는 기업의 가치, 해당 섹터의 시대적 흐르과 그 성장성에 더 관심을 가져야 한다
+037 내일의 종가를 맞히는 것보다는 기업의 가치, 해당 섹터의 시대적 흐름과 그 성장성에 더 관심을 가져야 한다
 
 037 (찰리 멍거) 미시적인 주가보다 거시적인 산업의 흐름으로 기업의 가치를 파악하는 일이 중요함을 강조했다
 
@@ -32,7 +32,7 @@
 
 040 인간은 자신이 아는 이론을 투자에 적용하기보다 심리에 더 휘둘리기 때문이다
 
-040 자신에게 익숙한 투자만 하는 사람들의 공통점은 실패를 경허하면서도 반복투자에서 벗어나지 못한다는 것이다
+040 자신에게 익숙한 투자만 하는 사람들의 공통점은 실패를 경험하면서도 반복투자에서 벗어나지 못한다는 것이다
 
 041 질문
 - 왜 당신은 포트폴리오에 외국 주식을 포함시키지 않는가?
@@ -44,8 +44,8 @@
 - 사후과잉 확신 : 과거의 예측 가능하지 않았던 이벤트들을 예측 가능하다고 인지
 - 손실 회피 : 수익 창출보다 손실 회피를 더 선호
 - 친숙성 : 친숙한 시장을 선호 (국내시장 선호)
-- 심리 계좌 : 경제적 의사 결정 시 자신이 정한 주관적 기준으로 계정을 성정하고 손익을 계산
-- 보유  보유한 자산에 더욱 가치를 둠
+- 심리 계좌 : 경제적 의사 결정 시 자신이 정한 주관적 기준으로 계정을 상정하고 손익을 계산
+- 보유 : 보유한 자산에 더욱 가치를 둠
 - 기준점 : 임의의 가격 수준, 기준점에 집착
 
 **044 주목해야하는 2가지 사회적 흐름 : 고령화 사회 진입, MZ세대의 부상**
@@ -67,7 +67,7 @@
 
 063 금융상품을 소비할 때는 더욱 신중하게 접근해야 한다. 잃어도 괜찮은 돈은 세상에 단 1푼도 없다
 
-066 물가상승률을 이겨예 하는 자산관리의 중요성
+066 물가상승률을 이겨야 하는 자산관리의 중요성
 
 071 매일 주식시장을 들여다보고 경험해보면 왠지 위험이 커 보인다. 그러나 장기적인 시각으로 접근하면 주식이야말로 유망한 투자처가 된다
 
@@ -116,7 +116,7 @@
 
 099 PBR = ROE * PER,  (시가총액/자기자본 = 당기순이익/자기자본 * 시가총액/당기순이익)
 
-104 주식이 저평가된 원인을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행ㅎ는 사업을 하는 기업일 수 있음을 체크해야 한다
+104 주식이 저평가된 원인을 찾아야 한다. 몇몇 사람만 공유하는 지배구조 리스크가 있거나, 미래흐름에 역행하는 사업을 하는 기업일 수 있음을 체크해야 한다
 
 105 PER 30배 이하, PBR 5배수 아래인 종목은 저평가 가능성이 있음
 
@@ -163,11 +163,11 @@
 
 167 그림 3-14 메릴린치 투자 시계
   ![메릴린치투자시계](./book_0132_메릴린치투자시계.jpg)
+
 - 상품시장 수익률은 디플레이션 초기와 후기 모두 안 좋다
 - 채권은 경기침체 초기에는 채권 수요 증가, 후기에는 감소, 고수익 추가하면서,,,
 - 주식은 경기가 안 좋을 때, 특히 경기 침체 후반기부터 좋다
-
-168 스태그플레이션 상황에서는 골치 아프게 머리 쓸 것 없이 예금하는 게 마음이 편하다 (5%, 코로나 시기에는 3% 상품에 사람들이 몰려감)
+- 스태그플레이션 상황에서는 골치 아프게 머리 쓸 것 없이 예금하는 게 마음이 편하다 (5%, 코로나 시기에는 3% 상품에 사람들이 몰려감)
 
 170 (투자) 최저점을 찾아 들어간다는 건 어리석은 생각이다. 저점/고점 찾는 것보다 경기 흐름 파악이 더 중요하다.
 
